--- a/locales/ar.json
+++ b/locales/ar.json
@@ -10,6 +10,10 @@
   "settingsSaved": "تم حفظ الإعدادات",
   "speedControl": "التحكم في السرعة",
   "speedControlDesc": "إضافة أزرار التحكم في السرعة إلى مشغل الفيديو",
+  "speedHotkeysTitle": "اختصارات سرعة لوحة المفاتيح",
+  "speedHotkeysDesc": "استخدم مفاتيح حرف واحد للتحكم في سرعة التشغيل",
+  "decreaseSpeedHotkey": "تقليل",
+  "increaseSpeedHotkey": "زيادة",
   "screenshotButton": "زر لقطة الشاشة",
   "screenshotButtonDesc": "إضافة زر التقاط لقطة الشاشة إلى مشغل الفيديو",
   "downloadButton": "زر التنزيل",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "ميزات محسّنة",
   "enhancedFeaturesDesc": "ميزات إنتاجية إضافية وتحسينات في واجهة المستخدم",
   "enablePlayAllLabel": "زر تشغيل الكل",
+  "playAllButton": "تشغيل الكل",
   "enablePlayAllDesc": "إضافة زر تشغيل الكل إلى قوائم التشغيل وصفحات القنوات",
   "enableResumeTimeLabel": "استئناف التشغيل",
   "enableResumeTimeDesc": "تذكر موضع الفيديو واقتراح الاستئناف",
@@ -201,6 +206,7 @@
   "reportCopied": "تم نسخ التقرير إلى الحافظة",
   "copyFailed": "فشل النسخ — يرجى النسخ يدويًا",
   "thumbnailPreview": "معاينة الصورة المصغرة",
+  "thumbnailPreviewDesc": "إضافة زر لفتح الصورة الأصلية للصور المصغرة/الصور الرمزية/اللافتات",
   "clickToOpen": "انقر للفتح في علامة تبويب جديدة",
   "download": "تنزيل",
   "thumbnailLoadFailed": "فشل تحميل الصورة",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "إظهار الشريط الجانبي عند التمرير مع رسوم متحركة سلسة",
   "playerSidebarStylesLabel": "لوحة جانبية للمشغل",
   "playerSidebarStylesDesc": "تحسين تخطيط السلوك للوحة الجانبية للمشغل",
+  "centeredPlayerLabel": "تخطيط المشغل المركزي",
+  "centeredPlayerDesc": "مركزة المشغل مع تصميم محسّن",
   "playerBarStylesLabel": "تنسيق شريط المشغل",
   "playerBarStylesDesc": "تحسين مظهر شريط المشغل السفلي",
   "centeredPlayerBarStylesLabel": "شريط مشغل مركزي",
   "centeredPlayerBarStylesDesc": "إعادة وضع وتمركز عناصر التحكم في المشغل",
   "miniPlayerStylesLabel": "مشغل صغير",
   "miniPlayerStylesDesc": "تمكين تعديلات تخطيط مشغل صغير",
-  "centeredPlayerLabel": "تخطيط المشغل المركزي",
-  "centeredPlayerDesc": "مركزة المشغل مع تصميم محسّن",
   "scrollToTopLabel": "زر التمرير إلى الأعلى",
   "scrollToTopDesc": "إظهار زر التمرير إلى الأعلى في اللوحة الجانبية",
   "musicSettingsSaved": "تم حفظ إعدادات YouTube Music",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "تصميم ترجمات محسن مع خلفية ضبابية",
   "zenStylePlayerBlurLabel": "تمويه عناصر التحكم في المشغل",
   "zenStylePlayerBlurDesc": "إضافة تأثير ضبابي لعناصر التحكم في المشغل",
+  "zenStyleTheaterEnhancementsLabel": "تحسينات وضع المسرح",
+  "zenStyleTheaterEnhancementsDesc": "لوحة تعليقات عائمة ووضع مسرح محسّن",
+  "zenStyleMiscLabel": "تحسينات متنوعة",
+  "zenStyleMiscDesc": "خلاصة مدمجة وقوائم عند التمرير وتحسينات بسيطة أخرى",
   "playlistDeleteMode": "وضع الحذف",
   "playlistDeleteModeExit": "الخروج من وضع الحذف",
   "playlistSelectVideo": "تحديد الفيديو",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "تم حذف {count} فيديو من قائمة التشغيل",
   "playlistDeletePartial": "{success} تم الحذف, {fail} فشل",
   "translateComment": "ترجمة",
-  "showOriginal": "عرض الأصل"
+  "showOriginal": "عرض الأصل",
+  "votingTab": "التصويت",
+  "votingTitle": "طلبات الميزات",
+  "votingDesc": "صوّت للميزات التي تريد رؤيتها في YouTube+",
+  "addFeature": "إضافة ميزة",
+  "featureTitle": "عنوان الميزة",
+  "featureDescription": "الوصف",
+  "noFeatures": "لا توجد طلبات ميزات بعد",
+  "submit": "إرسال",
+  "featureRequests": "طلبات الميزات",
+  "votes": "أصوات",
+  "like": "إعجاب",
+  "dislike": "عدم إعجاب",
+  "statusProposed": "مقترح",
+  "statusInProgress": "قيد التنفيذ",
+  "statusCompleted": "مكتمل"
 }
