--- a/locales/az.json
+++ b/locales/az.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Parametrlər yadda saxlandı",
   "speedControl": "Sürət İdarəsi",
   "speedControlDesc": "Video pleyerə sürət idarəsi düymələri əlavə et",
+  "speedHotkeysTitle": "Sürət Lata Qısayolları",
+  "speedHotkeysDesc": "Pleyement sürətini azaltmaq/artırmaq üçün tək hərfli qısayollardan istifadə et",
+  "decreaseSpeedHotkey": "Azalt",
+  "increaseSpeedHotkey": "Artır",
   "screenshotButton": "Ekran Görüntüsü Düyməsi",
   "screenshotButtonDesc": "Video pleyerə ekran görüntüsü düyməsi əlavə et",
   "downloadButton": "Yükləmə Düyməsi",
@@ -202,6 +206,7 @@
   "reportCopied": "Hesabat bufer yaddaşına kopyalandı",
   "copyFailed": "Kopyalama alınmadı — zəhmət olmasa əl ilə kopyalayın",
   "thumbnailPreview": "Miniatür Önizləmə",
+  "thumbnailPreviewDesc": "Miniatür/avatar/banner şəkillərinin orijinalını açmaq üçün düymə əlavə edin",
   "clickToOpen": "Yeni sekmede açmaq üçün klikləyin",
   "download": "Yüklə",
   "thumbnailLoadFailed": "Şəkil yüklənmədi",
@@ -281,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Bulanıq arxa planlı genişləndirilmiş altyazı stili",
   "zenStylePlayerBlurLabel": "Pleyer Nəzarətlərinin Bulanıqlığı",
   "zenStylePlayerBlurDesc": "Pleyer nəzarətlərinə bulanıqlıq effekti əlavə et",
+  "zenStyleTheaterEnhancementsLabel": "Teatr rejimi təkmilləşdirmələri",
+  "zenStyleTheaterEnhancementsDesc": "Üzən şərhlər paneli və təkmilləşdirilmiş teatr rejimi",
+  "zenStyleMiscLabel": "Müxtəlif təkmilləşdirmələr",
+  "zenStyleMiscDesc": "Yığcam lent, hover menyuları və digər kiçik təkmilləşdirmələr",
   "playlistDeleteMode": "Silmə Rejimi",
   "playlistDeleteModeExit": "Silmə Rejimindən Çıx",
   "playlistSelectVideo": "Video Seç",
@@ -289,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video pleylistdən silindi",
   "playlistDeletePartial": "{success} silindi, {fail} alınmadı",
   "translateComment": "Çevir",
-  "showOriginal": "Orijinalı göstər"
+  "showOriginal": "Orijinalı göstər",
+  "votingTab": "Səsvermə",
+  "votingTitle": "Funksiya sorğuları",
+  "votingDesc": "YouTube+-da görmək istədiyiniz funksiyalara səs verin",
+  "addFeature": "Funksiya əlavə et",
+  "featureTitle": "Funksiya başlığı",
+  "featureDescription": "Təsvir",
+  "noFeatures": "Hələ funksiya sorğusu yoxdur",
+  "submit": "Göndər",
+  "featureRequests": "Funksiya sorğuları",
+  "votes": "səs",
+  "like": "Bəyən",
+  "dislike": "Bəyənmədim",
+  "statusProposed": "Təklif edildi",
+  "statusInProgress": "İşlənir",
+  "statusCompleted": "Tamamlandı"
 }
