--- a/locales/be.json
+++ b/locales/be.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Налады захаваны",
   "speedControl": "Кіраванне хуткасцю",
   "speedControlDesc": "Дадаць кнопкі кіравання хуткасцю ў відэаплэер",
+  "speedHotkeysTitle": "Клавіатурныя скораты скорасцы",
+  "speedHotkeysDesc": "Карыстайцe аднолітерныя скораты для знізэння/паліксення скорасці відтворення",
+  "decreaseSpeedHotkey": "Зніжыць",
+  "increaseSpeedHotkey": "Палікшыць",
   "screenshotButton": "Кнопка скрыншота",
   "screenshotButtonDesc": "Дадаць кнопку захопу скрыншота ў відэаплэер",
   "downloadButton": "Кнопка спампоўкі",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Пашыраныя функцыі",
   "enhancedFeaturesDesc": "Дадатковыя функцыі прадукцыйнасці і паляпшэнні інтэрфейсу",
   "enablePlayAllLabel": "Кнопка «Прайграць усё»",
+  "playAllButton": "Прайграць усё",
   "enablePlayAllDesc": "Дадаць кнопку «Прайграць усё» ў плэйлісты і старонкі каналаў",
   "enableResumeTimeLabel": "Працягнуць прайграванне",
   "enableResumeTimeDesc": "Запамінаць пазіцыю відэа і прапаноўваць працягнуць",
@@ -201,6 +206,7 @@
   "reportCopied": "Справаздача скапіравана ў буфер абмену",
   "copyFailed": "Памылка капіравання — скапіруйце ўручную",
   "thumbnailPreview": "Папярэдні прагляд мініяцюры",
+  "thumbnailPreviewDesc": "Дадаць кнопку для адкрыцця арыгінальнага малюнка мініяцюр/аватараў/банераў",
   "clickToOpen": "Націсніце, каб адкрыць у новай укладцы",
   "download": "Спампаваць",
   "thumbnailLoadFailed": "Не ўдалося загрузіць выяву",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Палепшаны стыль субтытраў з размытым фонам",
   "zenStylePlayerBlurLabel": "Размыццё элементаў кіравання плэера",
   "zenStylePlayerBlurDesc": "Дадаць эфект размыцця да элементаў кіравання плэера",
+  "zenStyleTheaterEnhancementsLabel": "Палепшанні рэжыму кінатэатра",
+  "zenStyleTheaterEnhancementsDesc": "Плаваючая панэль каментарыяў і палепшаны рэжым кінатэатра",
+  "zenStyleMiscLabel": "Розныя палепшанні",
+  "zenStyleMiscDesc": "Кампактная стужка, меню пры навядзенні і іншыя палепшанні",
   "playlistDeleteMode": "Рэжым выдалення",
   "playlistDeleteModeExit": "Выйсці з рэжыму выдалення",
   "playlistSelectVideo": "Абраць відэа",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} відэа выдалена з плэйліста",
   "playlistDeletePartial": "{success} выдалена, {fail} не ўдалося",
   "translateComment": "Перакласці",
-  "showOriginal": "Паказаць арыгінал"
+  "showOriginal": "Паказаць арыгінал",
+  "votingTab": "Галасаванне",
+  "votingTitle": "Запыты функцый",
+  "votingDesc": "Галасуйце за функцыі, якія хочаце бачыць у YouTube+",
+  "addFeature": "Дадаць функцыю",
+  "featureTitle": "Назва функцыі",
+  "featureDescription": "Апісанне",
+  "noFeatures": "Пакуль няма запытаў функцый",
+  "submit": "Адправіць",
+  "featureRequests": "Запыты функцый",
+  "votes": "галасоў",
+  "like": "Падабаецца",
+  "dislike": "Не падабаецца",
+  "statusProposed": "Прапанавана",
+  "statusInProgress": "У працы",
+  "statusCompleted": "Гатова"
 }
