--- a/locales/bg.json
+++ b/locales/bg.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Настройките са запазени",
   "speedControl": "Управление на скоростта",
   "speedControlDesc": "Добави бутони за управление на скоростта във видео плейъра",
+  "speedHotkeysTitle": "Таставурни скорацы за скорост",
+  "speedHotkeysDesc": "Користете однобуквени скорацы за намаляне/зголяме на скоростта на висючаване",
+  "decreaseSpeedHotkey": "Намаляне",
+  "increaseSpeedHotkey": "Зголяме",
   "screenshotButton": "Бутон за екранна снимка",
   "screenshotButtonDesc": "Добави бутон за заснемане на екранна снимка във видео плейъра",
   "downloadButton": "Бутон за изтегляне",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Разширени функции",
   "enhancedFeaturesDesc": "Допълнителни функции за продуктивност и подобрения на интерфейса",
   "enablePlayAllLabel": "Бутон Пусни всички",
+  "playAllButton": "Пусни всички",
   "enablePlayAllDesc": "Добави бутон Пусни всички към плейлисти и страници на канали",
   "enableResumeTimeLabel": "Продължаване на възпроизвеждането",
   "enableResumeTimeDesc": "Запомняне позицията на видеото и предлагане за продължаване",
@@ -201,6 +206,7 @@
   "reportCopied": "Отчетът е копиран в клипборда",
   "copyFailed": "Неуспешно копиране — моля, копирайте ръчно",
   "thumbnailPreview": "Преглед на миниатюра",
+  "thumbnailPreviewDesc": "Добавяне на бутон за отваряне на оригиналното изображение на миниатюри/аватари/банери",
   "clickToOpen": "Натиснете за отваряне в нов раздел",
   "download": "Изтегли",
   "thumbnailLoadFailed": "Неуспешно зареждане на изображение",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Подобрен стил на субтитрите с размазан фон",
   "zenStylePlayerBlurLabel": "Размазване на контролите на плейъра",
   "zenStylePlayerBlurDesc": "Добавяне на ефект на размазване към контролите на плейъра",
+  "zenStyleTheaterEnhancementsLabel": "Подобрения на театралния режим",
+  "zenStyleTheaterEnhancementsDesc": "Плаващ панел с коментари и подобрен театрален режим",
+  "zenStyleMiscLabel": "Различни подобрения",
+  "zenStyleMiscDesc": "Компактна емисия, менюта при посочване и други подобрения",
   "playlistDeleteMode": "Режим на изтриване",
   "playlistDeleteModeExit": "Излизане от режим на изтриване",
   "playlistSelectVideo": "Избери видео",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} видео(а) премахнати от плейлиста",
   "playlistDeletePartial": "{success} премахнати, {fail} неуспешни",
   "translateComment": "Превод",
-  "showOriginal": "Покажи оригинала"
+  "showOriginal": "Покажи оригинала",
+  "votingTab": "Гласуване",
+  "votingTitle": "Искания за функции",
+  "votingDesc": "Гласувайте за функции, които искате да видите в YouTube+",
+  "addFeature": "Добави функция",
+  "featureTitle": "Заглавие на функцията",
+  "featureDescription": "Описание",
+  "noFeatures": "Все още няма искания за функции",
+  "submit": "Изпрати",
+  "featureRequests": "Искания за функции",
+  "votes": "гласа",
+  "like": "Харесва ми",
+  "dislike": "Не ми харесва",
+  "statusProposed": "Предложено",
+  "statusInProgress": "В процес",
+  "statusCompleted": "Завършено"
 }
