--- a/locales/cn.json
+++ b/locales/cn.json
@@ -10,6 +10,10 @@
   "settingsSaved": "设置已保存",
   "speedControl": "速度控制",
   "speedControlDesc": "在视频播放器中添加速度控制按钮",
+  "speedHotkeysTitle": "速度快捷键",
+  "speedHotkeysDesc": "使用单个字母快捷键来减少/增加播放速度",
+  "decreaseSpeedHotkey": "减速",
+  "increaseSpeedHotkey": "加速",
   "screenshotButton": "截图按钮",
   "screenshotButtonDesc": "在视频播放器中添加截图捕获按钮",
   "downloadButton": "下载按钮",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "增强功能",
   "enhancedFeaturesDesc": "额外的生产力功能和界面增强",
   "enablePlayAllLabel": "全部播放按钮",
+  "playAllButton": "播放全部",
   "enablePlayAllDesc": "在播放列表和频道页面添加全部播放按钮",
   "enableResumeTimeLabel": "恢复播放",
   "enableResumeTimeDesc": "记住视频位置并提供恢复选项",
@@ -110,6 +115,7 @@
   "settingsAriaLabel": "打开设置菜单",
   "settingsMenuAriaLabel": "统计显示设置",
   "unknown": "未知",
+  "privacy": "提交即表示您同意包含所述信息。请勿包含密码或个人令牌。",
   "monetization": "盈利",
   "country": "国家",
   "duration": "时长",
@@ -119,7 +125,6 @@
   "updateAvailableTitle": "YouTube + 更新可用",
   "version": "版本",
   "newFeatures": "新功能和改进",
-  "changelogHeader": "更新日志",
   "installUpdate": "安装更新",
   "later": "稍后",
   "enhancedExperience": "具有强大功能的增强型 YouTube 体验",
@@ -141,6 +146,7 @@
   "minutesAgo": "{n}分钟前",
   "updateAvailableMsg": "更新 {version} 可用！",
   "upToDateMsg": "您正在使用最新版本 ({version})",
+  "changelogHeader": "更新日志",
   "updateCheckFailed": "更新检查失败：{msg}",
   "noUpdateInfo": "没有可用的更新信息",
   "dismiss": "关闭",
@@ -183,7 +189,6 @@
   "openGitHub": "打开 GitHub Issue",
   "copyReport": "复制报告",
   "prepareEmail": "准备电子邮件",
-  "privacy": "提交即表示您同意包含所述信息。请勿包含密码或个人令牌。",
   "typeBug": "错误 / Bug",
   "typeFeature": "功能请求",
   "typeOther": "其他",
@@ -201,6 +206,7 @@
   "reportCopied": "报告已复制到剪贴板",
   "copyFailed": "复制失败 — 请手动复制",
   "thumbnailPreview": "缩略图预览",
+  "thumbnailPreviewDesc": "添加按钮以打开缩略图/头像/横幅的原始图片",
   "clickToOpen": "点击在新标签页中打开",
   "download": "下载",
   "thumbnailLoadFailed": "加载图片失败",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "悬停时显示侧边栏，带有平滑动画",
   "playerSidebarStylesLabel": "播放器侧边面板",
   "playerSidebarStylesDesc": "增强播放器侧边面板的布局和行为",
+  "centeredPlayerLabel": "居中播放器布局",
+  "centeredPlayerDesc": "使用增强样式居中播放器",
   "playerBarStylesLabel": "播放器底部样式",
   "playerBarStylesDesc": "改善底部播放器条的外观",
   "centeredPlayerBarStylesLabel": "居中播放器控制条",
   "centeredPlayerBarStylesDesc": "重新定位并居中播放器控制项",
   "miniPlayerStylesLabel": "迷你播放器",
   "miniPlayerStylesDesc": "启用迷你播放器的布局调整",
-  "centeredPlayerLabel": "居中播放器布局",
-  "centeredPlayerDesc": "使用增强样式居中播放器",
   "scrollToTopLabel": "返回顶部按钮",
   "scrollToTopDesc": "在侧面板显示返回顶部按钮",
   "musicSettingsSaved": "YouTube Music 设置已保存",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "增强字幕样式，添加模糊背景",
   "zenStylePlayerBlurLabel": "播放器控件模糊",
   "zenStylePlayerBlurDesc": "为播放器控件添加模糊效果",
+  "zenStyleTheaterEnhancementsLabel": "影院模式增强",
+  "zenStyleTheaterEnhancementsDesc": "浮动评论面板和改进的影院模式",
+  "zenStyleMiscLabel": "其他增强",
+  "zenStyleMiscDesc": "紧凑订阅源、悬停菜单和其他小改进",
   "playlistDeleteMode": "删除模式",
   "playlistDeleteModeExit": "退出删除模式",
   "playlistSelectVideo": "选择视频",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} 个视频已删除",
   "playlistDeletePartial": "{success} 个已删除, {fail} 个失败",
   "translateComment": "翻译",
-  "showOriginal": "显示原文"
+  "showOriginal": "显示原文",
+  "votingTab": "投票",
+  "votingTitle": "功能请求",
+  "votingDesc": "为您想在 YouTube+ 中看到的功能投票",
+  "addFeature": "添加功能",
+  "featureTitle": "功能标题",
+  "featureDescription": "描述",
+  "noFeatures": "暂无功能请求",
+  "submit": "提交",
+  "featureRequests": "功能请求",
+  "votes": "票",
+  "like": "赞",
+  "dislike": "踩",
+  "statusProposed": "已建议",
+  "statusInProgress": "进行中",
+  "statusCompleted": "已完成"
 }
