--- a/locales/de.json
+++ b/locales/de.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Einstellungen gespeichert",
   "speedControl": "Geschwindigkeitssteuerung",
   "speedControlDesc": "Geschwindigkeitssteuerungstasten zum Videoplayer hinzufügen",
+  "speedHotkeysTitle": "Geschwindigkeitstasten",
+  "speedHotkeysDesc": "Verwenden Sie Einzelbuchstaben-Tastenkombinationen, um die Wiedergabegeschwindigkeit zu verringern/erhöhen",
+  "decreaseSpeedHotkey": "Verringern",
+  "increaseSpeedHotkey": "Erhöhen",
   "screenshotButton": "Screenshot-Taste",
   "screenshotButtonDesc": "Screenshot-Taste zum Videoplayer hinzufügen",
   "downloadButton": "Download-Taste",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Erweiterte Funktionen",
   "enhancedFeaturesDesc": "Zusätzliche Produktivitätsfunktionen und UI-Verbesserungen",
   "enablePlayAllLabel": "Alle abspielen-Schaltfläche",
+  "playAllButton": "Alle abspielen",
   "enablePlayAllDesc": "Schaltfläche „Alle abspielen“ zu Wiedergabelisten und Kanalseiten hinzufügen",
   "enableResumeTimeLabel": "Wiedergabe fortsetzen",
   "enableResumeTimeDesc": "Videoposition merken und Wiedergabe-Fortsetzung anbieten",
@@ -201,6 +206,7 @@
   "reportCopied": "Bericht in die Zwischenablage kopiert",
   "copyFailed": "Kopieren fehlgeschlagen — bitte manuell kopieren",
   "thumbnailPreview": "Miniaturbildvorschau",
+  "thumbnailPreviewDesc": "Schaltfläche zum Öffnen des Originalbilds von Miniaturansichten/Avataren/Bannern hinzufügen",
   "clickToOpen": "Klicken zum Öffnen in neuem Tab",
   "download": "Herunterladen",
   "thumbnailLoadFailed": "Bild konnte nicht geladen werden",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Seitenleiste beim Überfahren mit sanften Animationen anzeigen",
   "playerSidebarStylesLabel": "Player-Seitenleiste",
   "playerSidebarStylesDesc": "Layout und Verhalten des Player-Seitenbereichs verbessern",
+  "centeredPlayerLabel": "Zentriertes Player-Layout",
+  "centeredPlayerDesc": "Player mit verbessertem Styling zentrieren",
   "playerBarStylesLabel": "Player-Leisten-Styling",
   "playerBarStylesDesc": "Aussehen der unteren Player-Leiste verbessern",
   "centeredPlayerBarStylesLabel": "Zentrierte Player-Leiste",
   "centeredPlayerBarStylesDesc": "Player-Leisten-Steuerelemente neu positionieren und zentrieren",
   "miniPlayerStylesLabel": "Mini-Player",
   "miniPlayerStylesDesc": "Layoutanpassungen für den Mini-Player aktivieren",
-  "centeredPlayerLabel": "Zentriertes Player-Layout",
-  "centeredPlayerDesc": "Player mit verbessertem Styling zentrieren",
   "scrollToTopLabel": "Nach-oben-scrollen-Taste",
   "scrollToTopDesc": "Nach-oben-scrollen-Taste im Seitenpanel anzeigen",
   "musicSettingsSaved": "YouTube Music-Einstellungen gespeichert",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Verbessertes Untertitel-Styling mit Unschärfe-Hintergrund",
   "zenStylePlayerBlurLabel": "Player-Steuerung Unschärfe",
   "zenStylePlayerBlurDesc": "Unschärfe-Effekt zu Player-Steuerelementen hinzufügen",
+  "zenStyleTheaterEnhancementsLabel": "Theater-Modus-Verbesserungen",
+  "zenStyleTheaterEnhancementsDesc": "Schwebendes Kommentarpanel und verbesserter Theater-Modus",
+  "zenStyleMiscLabel": "Verschiedene Verbesserungen",
+  "zenStyleMiscDesc": "Kompakter Feed, Hover-Menüs und weitere kleine Verbesserungen",
   "playlistDeleteMode": "Löschmodus",
   "playlistDeleteModeExit": "Löschmodus verlassen",
   "playlistSelectVideo": "Video auswählen",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} Videos aus der Wiedergabeliste gelöscht",
   "playlistDeletePartial": "{success} gelöscht, {fail} nicht gelöscht",
   "translateComment": "Übersetzen",
-  "showOriginal": "Original anzeigen"
+  "showOriginal": "Original anzeigen",
+  "votingTab": "Abstimmung",
+  "votingTitle": "Funktionsanfragen",
+  "votingDesc": "Stimmen Sie für Funktionen, die Sie in YouTube+ sehen möchten",
+  "addFeature": "Funktion hinzufügen",
+  "featureTitle": "Funktionstitel",
+  "featureDescription": "Beschreibung",
+  "noFeatures": "Noch keine Funktionsanfragen",
+  "submit": "Absenden",
+  "featureRequests": "Funktionsanfragen",
+  "votes": "Stimmen",
+  "like": "Gefällt mir",
+  "dislike": "Gefällt mir nicht",
+  "statusProposed": "Vorgeschlagen",
+  "statusInProgress": "In Bearbeitung",
+  "statusCompleted": "Abgeschlossen"
 }
