--- a/locales/du.json
+++ b/locales/du.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Instellingen opgeslagen",
   "speedControl": "Snelheidsregeling",
   "speedControlDesc": "Voeg snelheidsregelingsknoppen toe aan de videospeler",
+  "speedHotkeysTitle": "Snelheidtoetsenbordsnelkoppelingen",
+  "speedHotkeysDesc": "Gebruik sneltoetsen met één letter om de afspeelsnelheid te verlagen/verhogen",
+  "decreaseSpeedHotkey": "Verlagen",
+  "increaseSpeedHotkey": "Verhogen",
   "screenshotButton": "Schermafbeeldingsknop",
   "screenshotButtonDesc": "Voeg een schermafbeeldingsknop toe aan de videospeler",
   "downloadButton": "Downloadknop",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Verbeterde functies",
   "enhancedFeaturesDesc": "Extra productiviteitsfuncties en UI-verbeteringen",
   "enablePlayAllLabel": "Alles afspelen-knop",
+  "playAllButton": "Alles afspelen",
   "enablePlayAllDesc": "Voeg een Alles afspelen-knop toe aan afspeellijsten en kanaalpagina's",
   "enableResumeTimeLabel": "Afspelen hervatten",
   "enableResumeTimeDesc": "Onthoud videopositie en bied aan om verder te gaan",
@@ -82,6 +87,7 @@
   "live": "Live",
   "shorts": "Shorts",
   "statisticsButton": "Statistiekenknop",
+  "statisticsButtonDescription": "Toon statistiekenknop in videospeler",
   "displayOptions": "Weergaveopties",
   "channelStatsTitle": "Kanaalstatistieken",
   "channelStatsDescription": "Toon live abonnees/weergaven/video's overlay op kanaalbanner",
@@ -109,6 +115,7 @@
   "settingsAriaLabel": "Instellingenmenu openen",
   "settingsMenuAriaLabel": "Statistiekweergave-instellingen",
   "unknown": "Onbekend",
+  "privacy": "Door te verzenden, ga je ermee akkoord de opgegeven informatie op te nemen. Voeg geen wachtwoorden of persoonlijke tokens toe",
   "monetization": "Monetisatie",
   "country": "Land",
   "duration": "Duur",
@@ -118,7 +125,6 @@
   "updateAvailableTitle": "YouTube + Update beschikbaar",
   "version": "Versie",
   "newFeatures": "Nieuwe functies en verbeteringen",
-  "changelogHeader": "Wijzigingslog",
   "installUpdate": "Update installeren",
   "later": "Later",
   "enhancedExperience": "Verbeterde YouTube-ervaring met krachtige functies",
@@ -140,11 +146,10 @@
   "minutesAgo": "{n}m geleden",
   "updateAvailableMsg": "Update {version} beschikbaar!",
   "upToDateMsg": "Je gebruikt de laatste versie ({version})",
+  "changelogHeader": "Wijzigingslog",
   "updateCheckFailed": "Updatecontrole mislukt: {msg}",
   "noUpdateInfo": "Geen update-informatie beschikbaar",
   "dismiss": "Sluiten",
-  "privacy": "Door te verzenden, ga je ermee akkoord de opgegeven informatie op te nemen. Voeg geen wachtwoorden of persoonlijke tokens toe",
-  "statisticsButtonDescription": "Toon statistiekenknop in videospeler",
   "adBlocker": "Advertentieblokkeerder",
   "adBlockerDescription": "Sla advertenties over en verwijder advertentie-elementen automatisch",
   "seekBackward": "Achteruit zoeken",
@@ -201,6 +206,7 @@
   "reportCopied": "Rapport gekopieerd naar klembord",
   "copyFailed": "Kopiëren mislukt — kopieer handmatig",
   "thumbnailPreview": "Miniatuurvoorbeeld",
+  "thumbnailPreviewDesc": "Voeg een knop toe om de originele afbeelding van miniaturen/avatars/banners te openen",
   "clickToOpen": "Klik om in nieuw tabblad te openen",
   "download": "Downloaden",
   "thumbnailLoadFailed": "Afbeelding laden mislukt",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Toon zijbalk bij hover met vloeiende animaties",
   "playerSidebarStylesLabel": "Player Side Panel",
   "playerSidebarStylesDesc": "Enhance the player side panel layout and behavior",
+  "centeredPlayerLabel": "Gecentreerde speler lay-out",
+  "centeredPlayerDesc": "Centreer de speler met verbeterde stijl",
   "playerBarStylesLabel": "Player Bar Styling",
   "playerBarStylesDesc": "Improve the bottom player bar appearance",
   "centeredPlayerBarStylesLabel": "Centered Player Bar",
   "centeredPlayerBarStylesDesc": "Reposition and center player bar controls",
   "miniPlayerStylesLabel": "Mini Player",
   "miniPlayerStylesDesc": "Enable mini-player layout tweaks",
-  "centeredPlayerLabel": "Gecentreerde speler lay-out",
-  "centeredPlayerDesc": "Centreer de speler met verbeterde stijl",
   "scrollToTopLabel": "Scroll naar boven knop",
   "scrollToTopDesc": "Toon scroll naar boven knop in zijpaneel",
   "musicSettingsSaved": "YouTube Music-instellingen opgeslagen",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Verbeterde ondertitelstijl met vervagingsachtergrond",
   "zenStylePlayerBlurLabel": "Speler Bedieningselementen Vervagen",
   "zenStylePlayerBlurDesc": "Voeg vervagingseffect toe aan speler bedieningselementen",
+  "zenStyleTheaterEnhancementsLabel": "Bioscoopmodus verbeteringen",
+  "zenStyleTheaterEnhancementsDesc": "Zwevend commentaar paneel en verbeterde bioscoopmodus",
+  "zenStyleMiscLabel": "Diverse verbeteringen",
+  "zenStyleMiscDesc": "Compacte feed, zweefmenu's en andere kleine verbeteringen",
   "playlistDeleteMode": "Verwijdermodus",
   "playlistDeleteModeExit": "Verlaat de verwijdermodus",
   "playlistSelectVideo": "Selecteer video",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video's verwijderd uit de afspeellijst",
   "playlistDeletePartial": "{success} verwijderd, {fail} niet verwijderd",
   "translateComment": "Vertalen",
-  "showOriginal": "Origineel tonen"
+  "showOriginal": "Origineel tonen",
+  "votingTab": "Stemmen",
+  "votingTitle": "Functieverzoeken",
+  "votingDesc": "Stem op functies die u wilt zien in YouTube+",
+  "addFeature": "Functie toevoegen",
+  "featureTitle": "Functietitel",
+  "featureDescription": "Beschrijving",
+  "noFeatures": "Nog geen functieverzoeken",
+  "submit": "Verzenden",
+  "featureRequests": "Functieverzoeken",
+  "votes": "stemmen",
+  "like": "Vind ik leuk",
+  "dislike": "Vind ik niet leuk",
+  "statusProposed": "Voorgesteld",
+  "statusInProgress": "In uitvoering",
+  "statusCompleted": "Voltooid"
 }
