--- a/locales/en.json
+++ b/locales/en.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Settings saved",
   "speedControl": "Speed Control",
   "speedControlDesc": "Add speed control buttons to video player",
+  "speedHotkeysTitle": "Speed hotkeys",
+  "speedHotkeysDesc": "Use single-letter shortcuts to decrease/increase playback speed",
+  "decreaseSpeedHotkey": "Decrease",
+  "increaseSpeedHotkey": "Increase",
   "screenshotButton": "Screenshot Button",
   "screenshotButtonDesc": "Add screenshot capture button to video player",
   "downloadButton": "Download Button",
@@ -202,6 +206,7 @@
   "reportCopied": "Report copied to clipboard",
   "copyFailed": "Copy failed — please copy manually",
   "thumbnailPreview": "Thumbnail Preview",
+  "thumbnailPreviewDesc": "Add a button to thumbnails/avatars/banners to open the original image",
   "clickToOpen": "Click to open in new tab",
   "download": "Download",
   "thumbnailLoadFailed": "Failed to load image",
@@ -281,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Enhanced subtitle styling with blur backdrop",
   "zenStylePlayerBlurLabel": "Player Controls Blur",
   "zenStylePlayerBlurDesc": "Add blur effect to player controls",
+  "zenStyleTheaterEnhancementsLabel": "Theater Enhancements",
+  "zenStyleTheaterEnhancementsDesc": "Floating comments panel and improved theater mode",
+  "zenStyleMiscLabel": "Misc Enhancements",
+  "zenStyleMiscDesc": "Compact feed, hover menus, and other minor improvements",
   "playlistDeleteMode": "Delete mode",
   "playlistDeleteModeExit": "Exit delete mode",
   "playlistSelectVideo": "Select video",
@@ -289,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video(s) removed from playlist",
   "playlistDeletePartial": "{success} removed, {fail} failed",
   "translateComment": "Translate",
-  "showOriginal": "Show original"
+  "showOriginal": "Show original",
+  "votingTab": "Voting",
+  "votingTitle": "Feature Requests",
+  "votingDesc": "Vote for features you want to see in YouTube+",
+  "addFeature": "Add Feature",
+  "featureTitle": "Feature title",
+  "featureDescription": "Description",
+  "noFeatures": "No feature requests yet",
+  "submit": "Submit",
+  "featureRequests": "Feature Requests",
+  "votes": "votes",
+  "like": "Like",
+  "dislike": "Dislike",
+  "statusProposed": "Proposed",
+  "statusInProgress": "In progress",
+  "statusCompleted": "Completed"
 }
