--- a/locales/es.json
+++ b/locales/es.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Configuración guardada",
   "speedControl": "Control de velocidad",
   "speedControlDesc": "Agregar botones de control de velocidad al reproductor de video",
+  "speedHotkeysTitle": "Atajos de velocidad",
+  "speedHotkeysDesc": "Use atajos de una sola letra para disminuir/aumentar la velocidad de reproducción",
+  "decreaseSpeedHotkey": "Disminuir",
+  "increaseSpeedHotkey": "Aumentar",
   "screenshotButton": "Botón de captura",
   "screenshotButtonDesc": "Agregar botón de captura de pantalla al reproductor de video",
   "downloadButton": "Botón de descarga",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Funciones mejoradas",
   "enhancedFeaturesDesc": "Funciones adicionales de productividad y mejoras de la interfaz",
   "enablePlayAllLabel": "Botón Reproducir todo",
+  "playAllButton": "Reproducir todo",
   "enablePlayAllDesc": "Agregar botón Reproducir todo a listas de reproducción y páginas de canales",
   "enableResumeTimeLabel": "Reanudar reproducción",
   "enableResumeTimeDesc": "Recordar la posición del video y ofrecer reanudar",
@@ -201,6 +206,7 @@
   "reportCopied": "Informe copiado al portapapeles",
   "copyFailed": "Fallo al copiar — por favor copie manualmente",
   "thumbnailPreview": "Vista previa de miniatura",
+  "thumbnailPreviewDesc": "Añadir un botón para abrir la imagen original de miniaturas/avatares/banners",
   "clickToOpen": "Haz clic para abrir en una nueva pestaña",
   "download": "Descargar",
   "thumbnailLoadFailed": "No se pudo cargar la imagen",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Mostrar barra lateral al pasar el cursor con animaciones suaves",
   "playerSidebarStylesLabel": "Panel lateral del reproductor",
   "playerSidebarStylesDesc": "Mejorar el diseño y el comportamiento del panel lateral del reproductor",
+  "centeredPlayerLabel": "Diseño de reproductor centrado",
+  "centeredPlayerDesc": "Centrar el reproductor con estilo mejorado",
   "playerBarStylesLabel": "Estilo de la barra del reproductor",
   "playerBarStylesDesc": "Mejorar la apariencia de la barra inferior del reproductor",
   "centeredPlayerBarStylesLabel": "Barra del reproductor centrada",
   "centeredPlayerBarStylesDesc": "Reubicar y centrar los controles de la barra del reproductor",
   "miniPlayerStylesLabel": "Mini reproductor",
   "miniPlayerStylesDesc": "Habilitar ajustes de diseño para el mini reproductor",
-  "centeredPlayerLabel": "Diseño de reproductor centrado",
-  "centeredPlayerDesc": "Centrar el reproductor con estilo mejorado",
   "scrollToTopLabel": "Botón de desplazamiento al inicio",
   "scrollToTopDesc": "Mostrar botón de desplazamiento al inicio en el panel lateral",
   "musicSettingsSaved": "Configuración de YouTube Music guardada",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Estilo de subtítulos mejorado con fondo difuminado",
   "zenStylePlayerBlurLabel": "Desenfoque de Controles del Reproductor",
   "zenStylePlayerBlurDesc": "Agregar efecto de desenfoque a los controles del reproductor",
+  "zenStyleTheaterEnhancementsLabel": "Mejoras del modo teatro",
+  "zenStyleTheaterEnhancementsDesc": "Panel flotante de comentarios y modo teatro mejorado",
+  "zenStyleMiscLabel": "Mejoras diversas",
+  "zenStyleMiscDesc": "Feed compacto, menús flotantes y otras mejoras menores",
   "playlistDeleteMode": "Modo de eliminación",
   "playlistDeleteModeExit": "Salir del modo de eliminación",
   "playlistSelectVideo": "Seleccionar video",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} videos eliminados de la lista de reproducción",
   "playlistDeletePartial": "{success} eliminados, {fail} no se pudieron eliminar",
   "translateComment": "Traducir",
-  "showOriginal": "Mostrar original"
+  "showOriginal": "Mostrar original",
+  "votingTab": "Votación",
+  "votingTitle": "Solicitudes de características",
+  "votingDesc": "Vote por las características que desea ver en YouTube+",
+  "addFeature": "Añadir característica",
+  "featureTitle": "Título de la característica",
+  "featureDescription": "Descripción",
+  "noFeatures": "Aún no hay solicitudes de características",
+  "submit": "Enviar",
+  "featureRequests": "Solicitudes de características",
+  "votes": "votos",
+  "like": "Me gusta",
+  "dislike": "No me gusta",
+  "statusProposed": "Propuesto",
+  "statusInProgress": "En progreso",
+  "statusCompleted": "Completado"
 }
