--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Paramètres enregistrés",
   "speedControl": "Contrôle de vitesse",
   "speedControlDesc": "Ajouter des boutons de contrôle de vitesse au lecteur vidéo",
+  "speedHotkeysTitle": "Raccourcis clavier de vitesse",
+  "speedHotkeysDesc": "Utilisez des raccourcis à une seule lettre pour diminuer/augmenter la vitesse de lecture",
+  "decreaseSpeedHotkey": "Diminuer",
+  "increaseSpeedHotkey": "Augmenter",
   "screenshotButton": "Bouton de capture",
   "screenshotButtonDesc": "Ajouter un bouton de capture d'écran au lecteur vidéo",
   "downloadButton": "Bouton de téléchargement",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Fonctionnalités améliorées",
   "enhancedFeaturesDesc": "Fonctionnalités de productivité supplémentaires et améliorations de l'interface utilisateur",
   "enablePlayAllLabel": "Bouton « Tout lire »",
+  "playAllButton": "Tout lire",
   "enablePlayAllDesc": "Ajouter un bouton « Tout lire » aux playlists et aux pages de chaîne",
   "enableResumeTimeLabel": "Reprendre la lecture",
   "enableResumeTimeDesc": "Mémoriser la position de la vidéo et proposer de reprendre",
@@ -120,7 +125,6 @@
   "updateAvailableTitle": "Mise à jour YouTube + disponible",
   "version": "Version",
   "newFeatures": "Nouvelles fonctionnalités et améliorations",
-  "changelogHeader": "Journal des modifications",
   "installUpdate": "Installer la mise à jour",
   "later": "Plus tard",
   "enhancedExperience": "Expérience YouTube améliorée avec des fonctionnalités puissantes",
@@ -142,6 +146,7 @@
   "minutesAgo": "il y a {n}min",
   "updateAvailableMsg": "Mise à jour {version} disponible!",
   "upToDateMsg": "Vous utilisez la dernière version ({version})",
+  "changelogHeader": "Journal des modifications",
   "updateCheckFailed": "Échec de la vérification des mises à jour: {msg}",
   "noUpdateInfo": "Aucune information de mise à jour disponible",
   "dismiss": "Ignorer",
@@ -201,6 +206,7 @@
   "reportCopied": "Rapport copié dans le presse-papiers",
   "copyFailed": "Échec de la copie — veuillez copier manuellement",
   "thumbnailPreview": "Aperçu de la miniature",
+  "thumbnailPreviewDesc": "Ajouter un bouton pour ouvrir l'image originale des miniatures/avatars/bannières",
   "clickToOpen": "Cliquer pour ouvrir dans un nouvel onglet",
   "download": "Télécharger",
   "thumbnailLoadFailed": "Échec du chargement de l'image",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Afficher la barre latérale au survol avec animations fluides",
   "playerSidebarStylesLabel": "Panneau latéral du lecteur",
   "playerSidebarStylesDesc": "Améliorer la mise en page et le comportement du panneau latéral du lecteur",
+  "centeredPlayerLabel": "Lecteur centré",
+  "centeredPlayerDesc": "Centrer le lecteur avec un style amélioré",
   "playerBarStylesLabel": "Style de la barre du lecteur",
   "playerBarStylesDesc": "Améliorer l'apparence de la barre inférieure du lecteur",
   "centeredPlayerBarStylesLabel": "Barre du lecteur centrée",
   "centeredPlayerBarStylesDesc": "Repositionner et centrer les contrôles de la barre du lecteur",
   "miniPlayerStylesLabel": "Mini-lecteur",
   "miniPlayerStylesDesc": "Activer des ajustements de mise en page pour le mini-lecteur",
-  "centeredPlayerLabel": "Lecteur centré",
-  "centeredPlayerDesc": "Centrer le lecteur avec un style amélioré",
   "scrollToTopLabel": "Bouton retour en haut",
   "scrollToTopDesc": "Afficher le bouton retour en haut dans le panneau latéral",
   "musicSettingsSaved": "Paramètres YouTube Music enregistrés",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Style de sous-titres amélioré avec arrière-plan flou",
   "zenStylePlayerBlurLabel": "Flou des Commandes du Lecteur",
   "zenStylePlayerBlurDesc": "Ajouter un effet de flou aux commandes du lecteur",
+  "zenStyleTheaterEnhancementsLabel": "Améliorations du mode cinéma",
+  "zenStyleTheaterEnhancementsDesc": "Panneau de commentaires flottant et mode cinéma amélioré",
+  "zenStyleMiscLabel": "Améliorations diverses",
+  "zenStyleMiscDesc": "Flux compact, menus au survol et autres petites améliorations",
   "playlistDeleteMode": "Mode de suppression",
   "playlistDeleteModeExit": "Quitter le mode de suppression",
   "playlistSelectVideo": "Sélectionner une vidéo",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} vidéos supprimées de la playlist",
   "playlistDeletePartial": "{success} vidéos supprimées, {fail} échec",
   "translateComment": "Traduire",
-  "showOriginal": "Afficher l'original"
+  "showOriginal": "Afficher l'original",
+  "votingTab": "Vote",
+  "votingTitle": "Demandes de fonctionnalités",
+  "votingDesc": "Votez pour les fonctionnalités que vous souhaitez voir dans YouTube+",
+  "addFeature": "Ajouter une fonctionnalité",
+  "featureTitle": "Titre de la fonctionnalité",
+  "featureDescription": "Description",
+  "noFeatures": "Aucune demande de fonctionnalité pour le moment",
+  "submit": "Soumettre",
+  "featureRequests": "Demandes de fonctionnalités",
+  "votes": "votes",
+  "like": "J'aime",
+  "dislike": "Je n'aime pas",
+  "statusProposed": "Proposé",
+  "statusInProgress": "En cours",
+  "statusCompleted": "Terminé"
 }
