--- a/locales/hi.json
+++ b/locales/hi.json
@@ -10,6 +10,10 @@
   "settingsSaved": "सेटिंग्स सहेजी गई",
   "speedControl": "स्पीड कंट्रोल",
   "speedControlDesc": "वीडियो प्लेयर में स्पीड कंट्रोल बटन जोड़ें",
+  "speedHotkeysTitle": "गति कीबोर्ड शॉर्टकट",
+  "speedHotkeysDesc": "चलाने की गति को कम/बढ़ाने के लिए एक अक्षर के शॉर्टकट का उपयोग करें",
+  "decreaseSpeedHotkey": "घटाएं",
+  "increaseSpeedHotkey": "बढ़ाएं",
   "screenshotButton": "स्क्रीनशॉट बटन",
   "screenshotButtonDesc": "वीडियो प्लेयर में स्क्रीनशॉट कैप्चर बटन जोड़ें",
   "downloadButton": "डाउनलोड बटन",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "उन्नत सुविधाएँ",
   "enhancedFeaturesDesc": "अतिरिक्त उत्पादकता सुविधाएँ और UI सुधार",
   "enablePlayAllLabel": "सभी चलाएँ बटन",
+  "playAllButton": "सभी चलाएं",
   "enablePlayAllDesc": "प्लेलिस्ट और चैनल पृष्ठों में 'सभी चलाएँ' बटन जोड़ें",
   "enableResumeTimeLabel": "प्लेबैक फिर से शुरू करें",
   "enableResumeTimeDesc": "वीडियो की स्थिति याद रखें और फिर से शुरू करने का विकल्प दें",
@@ -201,6 +206,7 @@
   "reportCopied": "रिपोर्ट क्लिपबोर्ड में कॉपी की गई",
   "copyFailed": "कॉपी विफल — कृपया मैन्युअल कॉपी करें",
   "thumbnailPreview": "थंबनेल पूर्वावलोकन",
+  "thumbnailPreviewDesc": "थंबनेल/अवतार/बैनर की मूल छवि खोलने के लिए एक बटन जोड़ें",
   "clickToOpen": "नए टैब में खोलने के लिए क्लिक करें",
   "download": "डाउनलोड करें",
   "thumbnailLoadFailed": "छवि लोड करने में विफल",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "होवर पर साइडबार दिखाएं चिकने एनिमेशन के साथ",
   "playerSidebarStylesLabel": "प्लेयर साइड पैनल",
   "playerSidebarStylesDesc": "प्लेयर साइड पैनल के लेआउट और व्यवहार में सुधार करें",
+  "centeredPlayerLabel": "केंद्रित प्लेयर लेआउट",
+  "centeredPlayerDesc": "उन्नत स्टाइलिंग के साथ प्लेयर केंद्रित करें",
   "playerBarStylesLabel": "प्लेयर बार स्टाइलिंग",
   "playerBarStylesDesc": "नीचे वाले प्लेयर बार के दिखावे में सुधार करें",
   "centeredPlayerBarStylesLabel": "केंद्रित प्लेयर बार",
   "centeredPlayerBarStylesDesc": "प्लेयर बार नियंत्रणों को पुनर्स्थापित और केंद्र में रखें",
   "miniPlayerStylesLabel": "मिनी प्लेयर",
   "miniPlayerStylesDesc": "मिनी-प्लेयर लेआउट ट्वीक सक्षम करें",
-  "centeredPlayerLabel": "केंद्रित प्लेयर लेआउट",
-  "centeredPlayerDesc": "उन्नत स्टाइलिंग के साथ प्लेयर केंद्रित करें",
   "scrollToTopLabel": "शीर्ष पर स्क्रॉल बटन",
   "scrollToTopDesc": "साइड पैनल में शीर्ष पर स्क्रॉल बटन दिखाएं",
   "musicSettingsSaved": "YouTube Music सेटिंग्स सहेजी गईं",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "धुंधली पृष्ठभूमि के साथ बेहतर उपशीर्षक स्टाइलिंग",
   "zenStylePlayerBlurLabel": "प्लेयर कंट्रोल ब्लर",
   "zenStylePlayerBlurDesc": "प्लेयर कंट्रोल में ब्लर इफेक्ट जोड़ें",
+  "zenStyleTheaterEnhancementsLabel": "थियेटर मोड सुधार",
+  "zenStyleTheaterEnhancementsDesc": "फ्लोटिंग टिप्पणी पैनल और बेहतर थियेटर मोड",
+  "zenStyleMiscLabel": "विविध सुधार",
+  "zenStyleMiscDesc": "कॉम्पैक्ट फ़ीड, होवर मेनू और अन्य छोटे सुधार",
   "playlistDeleteMode": "हटाने का मोड",
   "playlistDeleteModeExit": "हटाने के मोड से बाहर निकलें",
   "playlistSelectVideo": "वीडियो चुनें",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} वीडियो प्लेलिस्ट से हटाए गए",
   "playlistDeletePartial": "{success} वीडियो हटाए गए, {fail} विफल",
   "translateComment": "अनवद कर",
-  "showOriginal": "मल दखए"
+  "showOriginal": "मल दखए",
+  "votingTab": "मतदान",
+  "votingTitle": "सुविधा अनुरोध",
+  "votingDesc": "उन सुविधाओं के लिए वोट करें जिन्हें आप YouTube+ में देखना चाहते हैं",
+  "addFeature": "सुविधा जोड़ें",
+  "featureTitle": "सुविधा शीर्षक",
+  "featureDescription": "विवरण",
+  "noFeatures": "अभी तक कोई सुविधा अनुरोध नहीं",
+  "submit": "जमा करें",
+  "featureRequests": "सुविधा अनुरोध",
+  "votes": "वोट",
+  "like": "पसंद",
+  "dislike": "नापसंद",
+  "statusProposed": "प्रस्तावित",
+  "statusInProgress": "प्रगति में",
+  "statusCompleted": "पूर्ण"
 }
