--- a/locales/id.json
+++ b/locales/id.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Pengaturan tersimpan",
   "speedControl": "Kontrol kecepatan",
   "speedControlDesc": "Tambahkan tombol kontrol kecepatan ke pemutar video",
+  "speedHotkeysTitle": "Pintasan Kecepatan Keyboard",
+  "speedHotkeysDesc": "Gunakan pintasan satu huruf untuk mengurangi/meningkatkan kecepatan pemutaran",
+  "decreaseSpeedHotkey": "Kurangi",
+  "increaseSpeedHotkey": "Tingkatkan",
   "screenshotButton": "Tombol tangkapan layar",
   "screenshotButtonDesc": "Tambahkan tombol tangkapan layar ke pemutar video",
   "downloadButton": "Tombol unduh",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Fitur yang Ditingkatkan",
   "enhancedFeaturesDesc": "Fitur produktivitas tambahan dan peningkatan antarmuka pengguna",
   "enablePlayAllLabel": "Tombol Putar Semua",
+  "playAllButton": "Putar Semua",
   "enablePlayAllDesc": "Tambahkan tombol Putar Semua ke playlist dan halaman saluran",
   "enableResumeTimeLabel": "Lanjutkan Pemutaran",
   "enableResumeTimeDesc": "Ingat posisi video dan tawarkan untuk melanjutkan",
@@ -201,6 +206,7 @@
   "reportCopied": "Laporan disalin ke clipboard",
   "copyFailed": "Penyalinan gagal — silakan salin secara manual",
   "thumbnailPreview": "Pratinjau thumbnail",
+  "thumbnailPreviewDesc": "Tambahkan tombol untuk membuka gambar asli thumbnail/avatar/banner",
   "clickToOpen": "Klik untuk membuka di tab baru",
   "download": "Unduh",
   "thumbnailLoadFailed": "Gagal memuat gambar",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Tampilkan sidebar saat hover dengan animasi halus",
   "playerSidebarStylesLabel": "Panel Samping Pemutar",
   "playerSidebarStylesDesc": "Tingkatkan tata letak dan perilaku panel samping pemutar",
+  "centeredPlayerLabel": "Tata letak pemutar terpusat",
+  "centeredPlayerDesc": "Pusatkan pemutar dengan gaya yang ditingkatkan",
   "playerBarStylesLabel": "Gaya Bilah Pemutar",
   "playerBarStylesDesc": "Perbaiki tampilan bilah pemutar bagian bawah",
   "centeredPlayerBarStylesLabel": "Bilah Pemutar Terpusat",
   "centeredPlayerBarStylesDesc": "Atur ulang posisi dan pusatkan kontrol bilah pemutar",
   "miniPlayerStylesLabel": "Pemutar Mini",
   "miniPlayerStylesDesc": "Aktifkan penyesuaian tata letak pemutar mini",
-  "centeredPlayerLabel": "Tata letak pemutar terpusat",
-  "centeredPlayerDesc": "Pusatkan pemutar dengan gaya yang ditingkatkan",
   "scrollToTopLabel": "Tombol gulir ke atas",
   "scrollToTopDesc": "Tampilkan tombol gulir ke atas di panel samping",
   "musicSettingsSaved": "Pengaturan YouTube Music disimpan",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Gaya teks terjemahan yang ditingkatkan dengan latar belakang blur",
   "zenStylePlayerBlurLabel": "Blur Kontrol Pemutar",
   "zenStylePlayerBlurDesc": "Tambahkan efek blur ke kontrol pemutar",
+  "zenStyleTheaterEnhancementsLabel": "Peningkatan Mode Teater",
+  "zenStyleTheaterEnhancementsDesc": "Panel komentar mengambang dan mode teater yang ditingkatkan",
+  "zenStyleMiscLabel": "Peningkatan Lain-lain",
+  "zenStyleMiscDesc": "Umpan ringkas, menu hover, dan peningkatan kecil lainnya",
   "playlistDeleteMode": "Mode Hapus",
   "playlistDeleteModeExit": "Keluar dari mode hapus",
   "playlistSelectVideo": "Pilih video",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video dihapus dari playlist",
   "playlistDeletePartial": "{success} dihapus, {fail} gagal",
   "translateComment": "Terjemahkan",
-  "showOriginal": "Tampilkan asli"
+  "showOriginal": "Tampilkan asli",
+  "votingTab": "Pemungutan Suara",
+  "votingTitle": "Permintaan Fitur",
+  "votingDesc": "Pilih fitur yang ingin Anda lihat di YouTube+",
+  "addFeature": "Tambah Fitur",
+  "featureTitle": "Judul fitur",
+  "featureDescription": "Deskripsi",
+  "noFeatures": "Belum ada permintaan fitur",
+  "submit": "Kirim",
+  "featureRequests": "Permintaan Fitur",
+  "votes": "suara",
+  "like": "Suka",
+  "dislike": "Tidak Suka",
+  "statusProposed": "Diusulkan",
+  "statusInProgress": "Sedang berlangsung",
+  "statusCompleted": "Selesai"
 }
