--- a/locales/it.json
+++ b/locales/it.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Impostazioni salvate",
   "speedControl": "Controllo velocità",
   "speedControlDesc": "Aggiungi pulsanti di controllo della velocità al lettore video",
+  "speedHotkeysTitle": "Scorciatoie velocità",
+  "speedHotkeysDesc": "Usa scorciatoie a una sola lettera per diminuire/aumentare la velocità di riproduzione",
+  "decreaseSpeedHotkey": "Diminuisci",
+  "increaseSpeedHotkey": "Aumenta",
   "screenshotButton": "Pulsante screenshot",
   "screenshotButtonDesc": "Aggiungi pulsante di cattura schermo al lettore video",
   "downloadButton": "Pulsante download",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Funzionalità avanzate",
   "enhancedFeaturesDesc": "Funzionalità di produttività aggiuntive e miglioramenti dell'interfaccia utente",
   "enablePlayAllLabel": "Pulsante Riproduci tutto",
+  "playAllButton": "Riproduci tutto",
   "enablePlayAllDesc": "Aggiungi il pulsante Riproduci tutto alle playlist e alle pagine del canale",
   "enableResumeTimeLabel": "Riprendi riproduzione",
   "enableResumeTimeDesc": "Ricorda la posizione del video e offre di riprenderla",
@@ -201,6 +206,7 @@
   "reportCopied": "Report copiato negli appunti",
   "copyFailed": "Copia fallita — copia manualmente",
   "thumbnailPreview": "Anteprima miniatura",
+  "thumbnailPreviewDesc": "Aggiungi un pulsante per aprire l'immagine originale di miniature/avatar/banner",
   "clickToOpen": "Clicca per aprire in una nuova scheda",
   "download": "Scarica",
   "thumbnailLoadFailed": "Impossibile caricare l'immagine",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Mostra barra laterale al passaggio del mouse con animazioni fluide",
   "playerSidebarStylesLabel": "Pannello laterale del player",
   "playerSidebarStylesDesc": "Migliora il layout e il comportamento del pannello laterale del player",
+  "centeredPlayerLabel": "Layout lettore centrato",
+  "centeredPlayerDesc": "Centra il lettore con stile migliorato",
   "playerBarStylesLabel": "Stile barra del player",
   "playerBarStylesDesc": "Migliora l'aspetto della barra inferiore del player",
   "centeredPlayerBarStylesLabel": "Barra del player centrata",
   "centeredPlayerBarStylesDesc": "Riposiziona e centra i controlli della barra del player",
   "miniPlayerStylesLabel": "Mini player",
   "miniPlayerStylesDesc": "Abilita modifiche al layout del mini-player",
-  "centeredPlayerLabel": "Layout lettore centrato",
-  "centeredPlayerDesc": "Centra il lettore con stile migliorato",
   "scrollToTopLabel": "Pulsante scorri in alto",
   "scrollToTopDesc": "Mostra pulsante scorri in alto nel pannello laterale",
   "musicSettingsSaved": "Impostazioni di YouTube Music salvate",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Stile dei sottotitoli migliorato con sfondo sfocato",
   "zenStylePlayerBlurLabel": "Sfocatura Controlli Lettore",
   "zenStylePlayerBlurDesc": "Aggiungi effetto sfocatura ai controlli del lettore",
+  "zenStyleTheaterEnhancementsLabel": "Miglioramenti modalità teatro",
+  "zenStyleTheaterEnhancementsDesc": "Pannello commenti fluttuante e modalità teatro migliorata",
+  "zenStyleMiscLabel": "Miglioramenti vari",
+  "zenStyleMiscDesc": "Feed compatto, menu al passaggio del mouse e altri piccoli miglioramenti",
   "playlistDeleteMode": "Modalità di eliminazione",
   "playlistDeleteModeExit": "Esci dalla modalità di eliminazione",
   "playlistSelectVideo": "Seleziona video",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video eliminati dalla playlist",
   "playlistDeletePartial": "{success} eliminati, {fail} non riusciti",
   "translateComment": "Traduci",
-  "showOriginal": "Mostra originale"
+  "showOriginal": "Mostra originale",
+  "votingTab": "Votazione",
+  "votingTitle": "Richieste di funzionalità",
+  "votingDesc": "Vota per le funzionalità che desideri vedere in YouTube+",
+  "addFeature": "Aggiungi funzionalità",
+  "featureTitle": "Titolo della funzionalità",
+  "featureDescription": "Descrizione",
+  "noFeatures": "Nessuna richiesta di funzionalità ancora",
+  "submit": "Invia",
+  "featureRequests": "Richieste di funzionalità",
+  "votes": "voti",
+  "like": "Mi piace",
+  "dislike": "Non mi piace",
+  "statusProposed": "Proposto",
+  "statusInProgress": "In corso",
+  "statusCompleted": "Completato"
 }
