--- a/locales/jp.json
+++ b/locales/jp.json
@@ -10,6 +10,10 @@
   "settingsSaved": "設定が保存されました",
   "speedControl": "速度制御",
   "speedControlDesc": "ビデオプレーヤーに速度制御ボタンを追加",
+  "speedHotkeysTitle": "速度キーボードショートカット",
+  "speedHotkeysDesc": "単一文字のショートカットを使用して再生速度を低下・増加させます",
+  "decreaseSpeedHotkey": "減速",
+  "increaseSpeedHotkey": "加速",
   "screenshotButton": "スクリーンショットボタン",
   "screenshotButtonDesc": "ビデオプレーヤーにスクリーンショットキャプチャボタンを追加",
   "downloadButton": "ダウンロードボタン",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "拡張機能",
   "enhancedFeaturesDesc": "生産性向上の機能とUIの改善を追加",
   "enablePlayAllLabel": "すべて再生ボタン",
+  "playAllButton": "すべて再生",
   "enablePlayAllDesc": "プレイリストとチャンネルページにすべて再生ボタンを追加",
   "enableResumeTimeLabel": "再生を再開",
   "enableResumeTimeDesc": "動画の再生位置を記憶し、再開を提案します",
@@ -120,7 +125,6 @@
   "updateAvailableTitle": "YouTube + アップデート利用可能",
   "version": "バージョン",
   "newFeatures": "新機能と改善",
-  "changelogHeader": "変更履歴",
   "installUpdate": "アップデートをインストール",
   "later": "後で",
   "enhancedExperience": "強力な機能による強化された YouTube 体験",
@@ -142,6 +146,7 @@
   "minutesAgo": "{n}分前",
   "updateAvailableMsg": "アップデート {version} が利用可能です！",
   "upToDateMsg": "最新バージョン ({version}) を使用しています",
+  "changelogHeader": "変更履歴",
   "updateCheckFailed": "アップデートチェックに失敗しました：{msg}",
   "noUpdateInfo": "更新情報がありません",
   "dismiss": "閉じる",
@@ -201,6 +206,7 @@
   "reportCopied": "レポートがクリップボードにコピーされました",
   "copyFailed": "コピーに失敗しました — 手動でコピーしてください",
   "thumbnailPreview": "サムネイルプレビュー",
+  "thumbnailPreviewDesc": "サムネイル/アバター/バナーの元画像を開くボタンを追加",
   "clickToOpen": "クリックして新しいタブで開く",
   "download": "ダウンロード",
   "thumbnailLoadFailed": "画像の読み込みに失敗しました",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "スムーズなアニメーションでホバー時にサイドバーを表示",
   "playerSidebarStylesLabel": "プレーヤーサイドパネル",
   "playerSidebarStylesDesc": "プレーヤーのサイドパネルのレイアウトと動作を強化する",
+  "centeredPlayerLabel": "中央配置プレーヤー",
+  "centeredPlayerDesc": "拡張スタイルでプレーヤーを中央に配置",
   "playerBarStylesLabel": "プレーヤーバーのスタイル",
   "playerBarStylesDesc": "下部プレーヤーバーの外観を改善する",
   "centeredPlayerBarStylesLabel": "中央配置プレーヤーバー",
   "centeredPlayerBarStylesDesc": "プレーヤーバーのコントロールを再配置して中央に配置する",
   "miniPlayerStylesLabel": "ミニプレーヤー",
   "miniPlayerStylesDesc": "ミニプレーヤーのレイアウト調整を有効にする",
-  "centeredPlayerLabel": "中央配置プレーヤー",
-  "centeredPlayerDesc": "拡張スタイルでプレーヤーを中央に配置",
   "scrollToTopLabel": "トップへスクロールボタン",
   "scrollToTopDesc": "サイドパネルにトップへスクロールボタンを表示",
   "musicSettingsSaved": "YouTube Music設定が保存されました",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "ぼかし背景付きの強化された字幕スタイリング",
   "zenStylePlayerBlurLabel": "プレーヤーコントロールのぼかし",
   "zenStylePlayerBlurDesc": "プレーヤーコントロールにぼかし効果を追加",
+  "zenStyleTheaterEnhancementsLabel": "シアターモードの強化",
+  "zenStyleTheaterEnhancementsDesc": "フローティングコメントパネルと改善されたシアターモード",
+  "zenStyleMiscLabel": "その他の強化",
+  "zenStyleMiscDesc": "コンパクトフィード、ホバーメニュー、その他の小さな改善",
   "playlistDeleteMode": "削除モード",
   "playlistDeleteModeExit": "削除モードを終了",
   "playlistSelectVideo": "ビデオを選択",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} 件のビデオがプレイリストから削除されました",
   "playlistDeletePartial": "{success} 件のビデオが削除され、{fail} 件のビデオは削除されませんでした",
   "translateComment": "翻訳",
-  "showOriginal": "原文を表示"
+  "showOriginal": "原文を表示",
+  "votingTab": "投票",
+  "votingTitle": "機能リクエスト",
+  "votingDesc": "YouTube+で見たい機能に投票してください",
+  "addFeature": "機能を追加",
+  "featureTitle": "機能タイトル",
+  "featureDescription": "説明",
+  "noFeatures": "まだ機能リクエストはありません",
+  "submit": "送信",
+  "featureRequests": "機能リクエスト",
+  "votes": "票",
+  "like": "いいね",
+  "dislike": "嫌い",
+  "statusProposed": "提案済み",
+  "statusInProgress": "進行中",
+  "statusCompleted": "完了"
 }
