--- a/locales/kk.json
+++ b/locales/kk.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Баптаулар сақталды",
   "speedControl": "Жылдамдықты басқару",
   "speedControlDesc": "Бейне ойнатқышқа жылдамдықты басқару түймелерін қосу",
+  "speedHotkeysTitle": "Жылдамдық парәнісі",
+  "speedHotkeysDesc": "Ойнату жылдамдығын әқсалтеу/қосу үшін бір тап парәнісі пайдаланыңыз",
+  "decreaseSpeedHotkey": "Азай",
+  "increaseSpeedHotkey": "Арты",
   "screenshotButton": "Скриншот түймесі",
   "screenshotButtonDesc": "Бейне ойнатқышқа скриншот түсіру түймесін қосу",
   "downloadButton": "Жүктеу түймесі",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Кеңейтілген мүмкіндіктер",
   "enhancedFeaturesDesc": "Қосымша өнімділік мүмкіндіктері мен интерфейс жақсартулары",
   "enablePlayAllLabel": "Барлығын ойнату түймесі",
+  "playAllButton": "Барлығын ойнату",
   "enablePlayAllDesc": "Ойнату тізімдеріне және арна беттеріне Барлығын ойнату түймесін қосу",
   "enableResumeTimeLabel": "Ойнатуды жалғастыру",
   "enableResumeTimeDesc": "Бейне позициясын есте сақтау және жалғастыруды ұсыну",
@@ -201,6 +206,7 @@
   "reportCopied": "Есеп буферге көшірілді",
   "copyFailed": "Көшіру қатесі — қолмен көшіріңіз",
   "thumbnailPreview": "Нобай алдын ала көрінісі",
+  "thumbnailPreviewDesc": "Нобайлар/аватарлар/баннерлердің түпнұсқа суретін ашу үшін батырма қосу",
   "clickToOpen": "Жаңа қойындыда ашу үшін басыңыз",
   "download": "Жүктеу",
   "thumbnailLoadFailed": "Суретті жүктеу қатесі",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Бұлыңғыр фонмен кеңейтілген субтитр стилі",
   "zenStylePlayerBlurLabel": "Ойнатқыш басқарулары бұлыңғырлығы",
   "zenStylePlayerBlurDesc": "Ойнатқыш басқаруларына бұлыңғырлық эффектін қосу",
+  "zenStyleTheaterEnhancementsLabel": "Театр режимін жақсарту",
+  "zenStyleTheaterEnhancementsDesc": "Қалқымалы пікірлер панелі және жақсартылған театр режимі",
+  "zenStyleMiscLabel": "Әртүрлі жақсартулар",
+  "zenStyleMiscDesc": "Ықшам арна, көрсеткіш мәзірлері және басқа кіші жақсартулар",
   "playlistDeleteMode": "Жою режимі",
   "playlistDeleteModeExit": "Жою режимінен шығу",
   "playlistSelectVideo": "Бейнені таңдау",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "Ойнату тізімінен {count} бейне жойылды",
   "playlistDeletePartial": "{success} жойылды, {fail} қате",
   "translateComment": "Аудару",
-  "showOriginal": "Түпнұсқаны көрсету"
+  "showOriginal": "Түпнұсқаны көрсету",
+  "votingTab": "Дауыс беру",
+  "votingTitle": "Мүмкіндіктер сұраулары",
+  "votingDesc": "YouTube+-та көргіңіз келетін мүмкіндіктерге дауыс беріңіз",
+  "addFeature": "Мүмкіндік қосу",
+  "featureTitle": "Мүмкіндік атауы",
+  "featureDescription": "Сипаттама",
+  "noFeatures": "Әзірге мүмкіндіктер сұраулары жоқ",
+  "submit": "Жіберу",
+  "featureRequests": "Мүмкіндіктер сұраулары",
+  "votes": "дауыс",
+  "like": "Ұнайды",
+  "dislike": "Ұнамайды",
+  "statusProposed": "Ұсынылған",
+  "statusInProgress": "Орындалуда",
+  "statusCompleted": "Аяқталды"
 }
