--- a/locales/kr.json
+++ b/locales/kr.json
@@ -10,6 +10,10 @@
   "settingsSaved": "설정 저장됨",
   "speedControl": "속도 조절",
   "speedControlDesc": "비디오 플레이어에 속도 조절 버튼 추가",
+  "speedHotkeysTitle": "속도 키보드 단축키",
+  "speedHotkeysDesc": "한 글자 단축키를 사용하여 재생 속도를 감소/증가시키세요",
+  "decreaseSpeedHotkey": "감소",
+  "increaseSpeedHotkey": "증가",
   "screenshotButton": "스크린샷 버튼",
   "screenshotButtonDesc": "비디오 플레이어에 스크린샷 캡처 버튼 추가",
   "downloadButton": "다운로드 버튼",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "향상된 기능",
   "enhancedFeaturesDesc": "추가적인 생산성 기능 및 UI 향상",
   "enablePlayAllLabel": "모두 재생 버튼",
+  "playAllButton": "모두 재생",
   "enablePlayAllDesc": "재생목록 및 채널 페이지에 모두 재생 버튼 추가",
   "enableResumeTimeLabel": "재생 이어서",
   "enableResumeTimeDesc": "비디오 위치를 기억하고 재생을 이어갈지 제안",
@@ -120,7 +125,6 @@
   "updateAvailableTitle": "YouTube + 업데이트 사용 가능",
   "version": "버전",
   "newFeatures": "새로운 기능 및 개선사항",
-  "changelogHeader": "변경 로그",
   "installUpdate": "업데이트 설치",
   "later": "나중에",
   "enhancedExperience": "강력한 기능으로 향상된 YouTube 경험",
@@ -142,6 +146,7 @@
   "minutesAgo": "{n}분 전",
   "updateAvailableMsg": "업데이트 {version} 사용 가능!",
   "upToDateMsg": "최신 버전({version})을 사용 중입니다",
+  "changelogHeader": "변경 로그",
   "updateCheckFailed": "업데이트 확인 실패: {msg}",
   "noUpdateInfo": "업데이트 정보가 없습니다",
   "dismiss": "닫기",
@@ -201,6 +206,7 @@
   "reportCopied": "보고서가 클립보드에 복사됨",
   "copyFailed": "복사 실패 — 수동으로 복사하세요",
   "thumbnailPreview": "썸네일 미리보기",
+  "thumbnailPreviewDesc": "썸네일/아바타/배너의 원본 이미지를 여는 버튼 추가",
   "clickToOpen": "클릭하여 새 탭에서 열기",
   "download": "다운로드",
   "thumbnailLoadFailed": "이미지 로드 실패",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "부드러운 애니메이션과 함께 호버 시 사이드바 표시",
   "playerSidebarStylesLabel": "플레이어 사이드 패널",
   "playerSidebarStylesDesc": "플레이어 사이드 패널의 레이아웃과 동작을 개선",
+  "centeredPlayerLabel": "중앙 플레이어 레이아웃",
+  "centeredPlayerDesc": "향상된 스타일로 플레이어 중앙 배치",
   "playerBarStylesLabel": "플레이어 바 스타일",
   "playerBarStylesDesc": "하단 플레이어 바의 외관을 개선",
   "centeredPlayerBarStylesLabel": "중앙 정렬된 플레이어 바",
   "centeredPlayerBarStylesDesc": "플레이어 바 컨트롤을 재배치하고 중앙에 정렬",
   "miniPlayerStylesLabel": "미니 플레이어",
   "miniPlayerStylesDesc": "미니 플레이어 레이아웃 조정 활성화",
-  "centeredPlayerLabel": "중앙 플레이어 레이아웃",
-  "centeredPlayerDesc": "향상된 스타일로 플레이어 중앙 배치",
   "scrollToTopLabel": "맨 위로 스크롤 버튼",
   "scrollToTopDesc": "사이드 패널에 맨 위로 스크롤 버튼 표시",
   "musicSettingsSaved": "YouTube Music 설정이 저장되었습니다",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "블러 배경이 있는 향상된 자막 스타일링",
   "zenStylePlayerBlurLabel": "플레이어 컨트롤 블러",
   "zenStylePlayerBlurDesc": "플레이어 컨트롤에 블러 효과 추가",
+  "zenStyleTheaterEnhancementsLabel": "시어터 모드 개선",
+  "zenStyleTheaterEnhancementsDesc": "떠 있는 댓글 패널 및 개선된 시어터 모드",
+  "zenStyleMiscLabel": "기타 개선",
+  "zenStyleMiscDesc": "컴팩트 피드, 호버 메뉴 및 기타 작은 개선 사항",
   "playlistDeleteMode": "삭제 모드",
   "playlistDeleteModeExit": "삭제 모드 종료",
   "playlistSelectVideo": "비디오 선택",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count}개의 비디오가 재생목록에서 삭제되었습니다",
   "playlistDeletePartial": "{success}개의 비디오가 삭제되었고, {fail}개의 비디오는 삭제되지 않았습니다",
   "translateComment": "번역",
-  "showOriginal": "원문 보기"
+  "showOriginal": "원문 보기",
+  "votingTab": "투표",
+  "votingTitle": "기능 요청",
+  "votingDesc": "YouTube+에서 보고 싶은 기능에 투표하세요",
+  "addFeature": "기능 추가",
+  "featureTitle": "기능 제목",
+  "featureDescription": "설명",
+  "noFeatures": "아직 기능 요청이 없습니다",
+  "submit": "제출",
+  "featureRequests": "기능 요청",
+  "votes": "표",
+  "like": "좋아요",
+  "dislike": "싫어요",
+  "statusProposed": "제안됨",
+  "statusInProgress": "진행 중",
+  "statusCompleted": "완료됨"
 }
