--- a/locales/ky.json
+++ b/locales/ky.json
@@ -9,8 +9,12 @@
   "saveChanges": "Өзгөрүүлөрдү сактоо",
   "settingsSaved": "Жөндөөлөр сакталды",
   "speedControl": "Ылдамдыкты башкаруу",
-  "speedControlDesc": "Видео ойноткучка ылдамдыкты башкаруу баскычтарын кошуу",
-  "screenshotButton": "Скриншот баскычы",
+  "speedControlDesc": "Видео ойното тукучигэ ылдамдыкты башкаруу төмөктөрүн тәнеме",
+  "speedHotkeysTitle": "Частык такмалар",
+  "speedHotkeysDesc": "Oynotuu ылдамдыгын азайтуу/көбөйтүү үчүн бир тамга часки тактай колдонуңуз",
+  "decreaseSpeedHotkey": "Азайт",
+  "increaseSpeedHotkey": "Нөмөр",
+  "screenshotButton": "Скриншот төмөктөрү",
   "screenshotButtonDesc": "Видео ойноткучка скриншот тартуу баскычын кошуу",
   "downloadButton": "Жүктөө баскычы",
   "downloadButtonDesc": "Видео ойноткучка бир нече сайт варианты менен жүктөө баскычын кошуу",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Кеңейтилген мүмкүнчүлүктөр",
   "enhancedFeaturesDesc": "Кошумча өндүрүмдүүлүк мүмкүнчүлүктөрү жана интерфейс жакшыртуулары",
   "enablePlayAllLabel": "Баарын ойнотуу баскычы",
+  "playAllButton": "Баарын ойнотуу",
   "enablePlayAllDesc": "Ойнотуу тизмелерине жана канал барактарына Баарын ойнотуу баскычын кошуу",
   "enableResumeTimeLabel": "Ойнотууну улантуу",
   "enableResumeTimeDesc": "Видео позициясын эстеп калуу жана улантууну сунуштоо",
@@ -201,6 +206,7 @@
   "reportCopied": "Отчёт буферге көчүрүлдү",
   "copyFailed": "Көчүрүү катасы — кол менен көчүрүңүз",
   "thumbnailPreview": "Эскиз алдын ала көрүнүшү",
+  "thumbnailPreviewDesc": "Миниатюралар/аватарлар/баннерлердин түпнускасын ачуу үчүн баскычты кошуу",
   "clickToOpen": "Жаңы өтмөктө ачуу үчүн басыңыз",
   "download": "Жүктөө",
   "thumbnailLoadFailed": "Сүрөттү жүктөө катасы",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Бүдөмүк фон менен кеңейтилген субтитр стили",
   "zenStylePlayerBlurLabel": "Ойноткуч башкаруулары бүдөмүктүүлүгү",
   "zenStylePlayerBlurDesc": "Ойноткуч башкарууларына бүдөмүктүүлүк эффектин кошуу",
+  "zenStyleTheaterEnhancementsLabel": "Театр режимин жакшыртуулар",
+  "zenStyleTheaterEnhancementsDesc": "Калкымалуу комментарийлер панели жана жакшыртылган театр режими",
+  "zenStyleMiscLabel": "Башка жакшыртуулар",
+  "zenStyleMiscDesc": "Ыкчам агым, көрсөткүч менюлары жана башка кичине жакшыртуулар",
   "playlistDeleteMode": "Өчүрүү режими",
   "playlistDeleteModeExit": "Өчүрүү режиминен чыгуу",
   "playlistSelectVideo": "Видеону тандоо",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "Ойнотуу тизмесинен {count} видео өчүрүлдү",
   "playlistDeletePartial": "{success} өчүрүлдү, {fail} ката",
   "translateComment": "Которуу",
-  "showOriginal": "Түпнүсканы көрсөтүү"
+  "showOriginal": "Түпнүсканы көрсөтүү",
+  "votingTab": "Добуш берүү",
+  "votingTitle": "Функциялар суроолору",
+  "votingDesc": "YouTube+-та көргүңүз келген функцияларга добуш бериңиз",
+  "addFeature": "Функцияны кошуу",
+  "featureTitle": "Функциянын аталышы",
+  "featureDescription": "Сыпаттама",
+  "noFeatures": "Азырынча функциялар суроолору жок",
+  "submit": "Жөнөтүү",
+  "featureRequests": "Функциялар суроолору",
+  "votes": "добуш",
+  "like": "Жакты",
+  "dislike": "Жакпады",
+  "statusProposed": "Сунушталды",
+  "statusInProgress": "Аткарылууда",
+  "statusCompleted": "Бүттү"
 }
