--- a/locales/pl.json
+++ b/locales/pl.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Ustawienia zapisane",
   "speedControl": "Kontrola prędkości",
   "speedControlDesc": "Dodaj przyciski kontroli prędkości do odtwarzacza wideo",
+  "speedHotkeysTitle": "Skróty prędkości",
+  "speedHotkeysDesc": "Użyj jednoliterowych skrótów, aby zmniejszyć/zwiększyć prędkość odtwarzania",
+  "decreaseSpeedHotkey": "Zmniejsz",
+  "increaseSpeedHotkey": "Zwiększ",
   "screenshotButton": "Przycisk zrzutu ekranu",
   "screenshotButtonDesc": "Dodaj przycisk przechwytywania zrzutu ekranu do odtwarzacza wideo",
   "downloadButton": "Przycisk pobierania",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Ulepszone funkcje",
   "enhancedFeaturesDesc": "Dodatkowe funkcje zwiększające produktywność oraz ulepszenia interfejsu użytkownika",
   "enablePlayAllLabel": "Przycisk „Odtwórz wszystko”",
+  "playAllButton": "Odtwórz wszystko",
   "enablePlayAllDesc": "Dodaj przycisk „Odtwórz wszystko” do playlist i stron kanałów",
   "enableResumeTimeLabel": "Wznów odtwarzanie",
   "enableResumeTimeDesc": "Zapamiętaj pozycję w wideo i zaoferuj wznowienie",
@@ -201,6 +206,7 @@
   "reportCopied": "Raport skopiowany do schowka",
   "copyFailed": "Kopiowanie nie powiodło się — skopiuj ręcznie",
   "thumbnailPreview": "Podgląd miniatury",
+  "thumbnailPreviewDesc": "Dodaj przycisk do otwierania oryginalnego obrazu miniatur/awatarów/banerów",
   "clickToOpen": "Kliknij, aby otworzyć w nowej karcie",
   "download": "Pobierz",
   "thumbnailLoadFailed": "Nie udało się załadować obrazu",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Pokaż pasek boczny przy najechaniu z płynnymi animacjami",
   "playerSidebarStylesLabel": "Panel boczny odtwarzacza",
   "playerSidebarStylesDesc": "Ulepsz układ i zachowanie panelu bocznego odtwarzacza",
+  "centeredPlayerLabel": "Wyśrodkowany układ odtwarzacza",
+  "centeredPlayerDesc": "Wyśrodkuj odtwarzacz z ulepszonym stylem",
   "playerBarStylesLabel": "Styl paska odtwarzacza",
   "playerBarStylesDesc": "Popraw wygląd dolnego paska odtwarzacza",
   "centeredPlayerBarStylesLabel": "Wyśrodkowany pasek odtwarzacza",
   "centeredPlayerBarStylesDesc": "Przemieść i wyśrodkuj kontrolki paska odtwarzacza",
   "miniPlayerStylesLabel": "Mini odtwarzacz",
   "miniPlayerStylesDesc": "Włącz poprawki układu mini-odtwarzacza",
-  "centeredPlayerLabel": "Wyśrodkowany układ odtwarzacza",
-  "centeredPlayerDesc": "Wyśrodkuj odtwarzacz z ulepszonym stylem",
   "scrollToTopLabel": "Przycisk przewijania do góry",
   "scrollToTopDesc": "Pokaż przycisk przewijania do góry w panelu bocznym",
   "musicSettingsSaved": "Ustawienia YouTube Music zapisane",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Ulepszone stylizowanie napisów z rozmytym tłem",
   "zenStylePlayerBlurLabel": "Rozmycie Kontrolek Odtwarzacza",
   "zenStylePlayerBlurDesc": "Dodaj efekt rozmycia do kontrolek odtwarzacza",
+  "zenStyleTheaterEnhancementsLabel": "Ulepszenia trybu kina",
+  "zenStyleTheaterEnhancementsDesc": "Unoszący się panel komentarzy i ulepszony tryb kina",
+  "zenStyleMiscLabel": "Różne ulepszenia",
+  "zenStyleMiscDesc": "Kompaktowy kanał, menu po najechaniu i inne drobne ulepszenia",
   "playlistDeleteMode": "Tryb usuwania",
   "playlistDeleteModeExit": "Wyjdź z trybu usuwania",
   "playlistSelectVideo": "Wybierz wideo",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} wideo usunięto z playlisty",
   "playlistDeletePartial": "{success} wideo usunięto, {fail} wideo nie udało się usunąć",
   "translateComment": "Przetłumacz",
-  "showOriginal": "Pokaż oryginał"
+  "showOriginal": "Pokaż oryginał",
+  "votingTab": "Głosowanie",
+  "votingTitle": "Prośby o funkcje",
+  "votingDesc": "Głosuj na funkcje, które chcesz zobaczyć w YouTube+",
+  "addFeature": "Dodaj funkcję",
+  "featureTitle": "Tytuł funkcji",
+  "featureDescription": "Opis",
+  "noFeatures": "Brak próśb o funkcje",
+  "submit": "Wyślij",
+  "featureRequests": "Prośby o funkcje",
+  "votes": "głosów",
+  "like": "Lubię to",
+  "dislike": "Nie lubię tego",
+  "statusProposed": "Zaproponowano",
+  "statusInProgress": "W trakcie",
+  "statusCompleted": "Ukończono"
 }
