--- a/locales/pt.json
+++ b/locales/pt.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Configurações salvas",
   "speedControl": "Controle de velocidade",
   "speedControlDesc": "Adicionar botões de controle de velocidade ao reprodutor de vídeo",
+  "speedHotkeysTitle": "Atalhos de velocidade",
+  "speedHotkeysDesc": "Use atalhos de uma única letra para diminuir/aumentar a velocidade de reprodução",
+  "decreaseSpeedHotkey": "Diminuir",
+  "increaseSpeedHotkey": "Aumentar",
   "screenshotButton": "Botão de captura",
   "screenshotButtonDesc": "Adicionar botão de captura de tela ao reprodutor de vídeo",
   "downloadButton": "Botão de download",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Recursos Aprimorados",
   "enhancedFeaturesDesc": "Recursos de produtividade adicionais e melhorias de interface",
   "enablePlayAllLabel": "Botão Reproduzir Tudo",
+  "playAllButton": "Reproduzir Tudo",
   "enablePlayAllDesc": "Adicionar botão 'Reproduzir Tudo' em playlists e páginas do canal",
   "enableResumeTimeLabel": "Retomar Reprodução",
   "enableResumeTimeDesc": "Lembrar a posição do vídeo e oferecer retomar",
@@ -201,6 +206,7 @@
   "reportCopied": "Relatório copiado para a área de transferência",
   "copyFailed": "Falha ao copiar — por favor, copie manualmente",
   "thumbnailPreview": "Visualização de miniatura",
+  "thumbnailPreviewDesc": "Adicionar um botão para abrir a imagem original de miniaturas/avatares/banners",
   "clickToOpen": "Clique para abrir em uma nova aba",
   "download": "Baixar",
   "thumbnailLoadFailed": "Falha ao carregar imagem",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Mostrar barra lateral ao passar o mouse com animações suaves",
   "playerSidebarStylesLabel": "Painel lateral do player",
   "playerSidebarStylesDesc": "Aprimorar o layout e o comportamento do painel lateral do player",
+  "centeredPlayerLabel": "Layout de reprodutor centralizado",
+  "centeredPlayerDesc": "Centralizar o reprodutor com estilo aprimorado",
   "playerBarStylesLabel": "Estilos da barra do player",
   "playerBarStylesDesc": "Melhorar a aparência da barra inferior do player",
   "centeredPlayerBarStylesLabel": "Barra do player centralizada",
   "centeredPlayerBarStylesDesc": "Reposicionar e centralizar os controles da barra do player",
   "miniPlayerStylesLabel": "Mini player",
   "miniPlayerStylesDesc": "Ativar ajustes no layout do mini-player",
-  "centeredPlayerLabel": "Layout de reprodutor centralizado",
-  "centeredPlayerDesc": "Centralizar o reprodutor com estilo aprimorado",
   "scrollToTopLabel": "Botão de rolar para o topo",
   "scrollToTopDesc": "Mostrar botão de rolar para o topo no painel lateral",
   "musicSettingsSaved": "Configurações do YouTube Music salvas",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Estilo de legendas aprimorado com fundo desfocado",
   "zenStylePlayerBlurLabel": "Desfoque dos Controles do Reprodutor",
   "zenStylePlayerBlurDesc": "Adicionar efeito de desfoque aos controles do reprodutor",
+  "zenStyleTheaterEnhancementsLabel": "Melhorias do modo teatro",
+  "zenStyleTheaterEnhancementsDesc": "Painel de comentários flutuante e modo teatro aprimorado",
+  "zenStyleMiscLabel": "Melhorias diversas",
+  "zenStyleMiscDesc": "Feed compacto, menus de passar o mouse e outras pequenas melhorias",
   "playlistDeleteMode": "Modo de Exclusão",
   "playlistDeleteModeExit": "Sair do Modo de Exclusão",
   "playlistSelectVideo": "Selecionar Vídeo",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} vídeo(s) excluído(s) da playlist",
   "playlistDeletePartial": "{success} vídeo(s) excluído(s), {fail} vídeo(s) não foi(ram) possível excluir",
   "translateComment": "Traduzir",
-  "showOriginal": "Mostrar original"
+  "showOriginal": "Mostrar original",
+  "votingTab": "Votação",
+  "votingTitle": "Solicitações de recursos",
+  "votingDesc": "Vote nos recursos que você deseja ver no YouTube+",
+  "addFeature": "Adicionar recurso",
+  "featureTitle": "Título do recurso",
+  "featureDescription": "Descrição",
+  "noFeatures": "Nenhuma solicitação de recurso ainda",
+  "submit": "Enviar",
+  "featureRequests": "Solicitações de recursos",
+  "votes": "votos",
+  "like": "Gostei",
+  "dislike": "Não gostei",
+  "statusProposed": "Proposto",
+  "statusInProgress": "Em andamento",
+  "statusCompleted": "Concluído"
 }
