--- a/locales/ru.json
+++ b/locales/ru.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Настройки сохранены",
   "speedControl": "Управление скоростью",
   "speedControlDesc": "Добавить кнопки управления скоростью в видеоплеер",
+  "speedHotkeysTitle": "Горячие клавиши скорости",
+  "speedHotkeysDesc": "Используйте одиночные клавиши для уменьшения/увеличения скорости",
+  "decreaseSpeedHotkey": "Уменьшить",
+  "increaseSpeedHotkey": "Увеличить",
   "screenshotButton": "Кнопка скриншота",
   "screenshotButtonDesc": "Добавить кнопку создания скриншота в видеоплеер",
   "downloadButton": "Кнопка загрузки",
@@ -202,6 +206,7 @@
   "reportCopied": "Отчет скопирован в буфер обмена",
   "copyFailed": "Копирование не удалось — пожалуйста, скопируйте вручную",
   "thumbnailPreview": "Предпросмотр миниатюры",
+  "thumbnailPreviewDesc": "Добавить кнопку для открытия оригинального изображения миниатюр/аватаров/баннеров",
   "clickToOpen": "Нажмите, чтобы открыть в новой вкладке",
   "download": "Скачать",
   "thumbnailLoadFailed": "Не удалось загрузить изображение",
@@ -281,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Улучшенный стиль субтитров с размытым фоном",
   "zenStylePlayerBlurLabel": "Размытие элементов управления плеера",
   "zenStylePlayerBlurDesc": "Добавить эффект размытия к элементам управления",
+  "zenStyleTheaterEnhancementsLabel": "Улучшения режима кинотеатра",
+  "zenStyleTheaterEnhancementsDesc": "Плавающая панель комментариев и улучшенный режим кинотеатра",
+  "zenStyleMiscLabel": "Разные улучшения",
+  "zenStyleMiscDesc": "Компактная лента, меню при наведении и другие улучшения",
   "playlistDeleteMode": "Режим удаления",
   "playlistDeleteModeExit": "Выйти из режима удаления",
   "playlistSelectVideo": "Выбрать видео",
@@ -289,5 +298,20 @@
   "playlistDeleteSuccess": "{count} видео удалено из плейлиста",
   "playlistDeletePartial": "{success} удалено, {fail} не удалось",
   "translateComment": "Перевести",
-  "showOriginal": "Показать оригинал"
+  "showOriginal": "Показать оригинал",
+  "votingTab": "Голосование",
+  "votingTitle": "Запросы функций",
+  "votingDesc": "Голосуйте за функции, которые хотите видеть в YouTube+",
+  "addFeature": "Добавить функцию",
+  "featureTitle": "Название функции",
+  "featureDescription": "Описание",
+  "noFeatures": "Пока нет запросов функций",
+  "submit": "Отправить",
+  "featureRequests": "Запросы функций",
+  "votes": "голосов",
+  "like": "Нравится",
+  "dislike": "Не нравится",
+  "statusProposed": "Предложено",
+  "statusInProgress": "В работе",
+  "statusCompleted": "Готово"
 }
