--- a/locales/tr.json
+++ b/locales/tr.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Ayarlar kaydedildi",
   "speedControl": "Hız Kontrolü",
   "speedControlDesc": "Video oynatıcıya hız kontrolü butonları ekle",
+  "speedHotkeysTitle": "Hız Kısayolları",
+  "speedHotkeysDesc": "Oynatma hızını azaltmak/artırmak için tek harfli kısayollar kullanın",
+  "decreaseSpeedHotkey": "Azalt",
+  "increaseSpeedHotkey": "Arttır",
   "screenshotButton": "Ekran Görüntüsü Butonu",
   "screenshotButtonDesc": "Video oynatıcıya ekran görüntüsü yakalama butonu ekle",
   "downloadButton": "İndirme Butonu",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Gelişmiş Özellikler",
   "enhancedFeaturesDesc": "Ek üretkenlik özellikleri ve kullanıcı arayüzü iyileştirmeleri",
   "enablePlayAllLabel": "Tümünü Oynat Düğmesi",
+  "playAllButton": "Tümünü Oynat",
   "enablePlayAllDesc": "Oynatma listelerine ve kanal sayfalarına Tümünü Oynat düğmesi ekle",
   "enableResumeTimeLabel": "Oynatmaya Devam Et",
   "enableResumeTimeDesc": "Video pozisyonunu hatırla ve devam etmeyi teklif et",
@@ -82,6 +87,7 @@
   "live": "Canlı",
   "shorts": "Shorts",
   "statisticsButton": "İstatistik Butonu",
+  "statisticsButtonDescription": "Video oynatıcıda istatistik butonunu göster",
   "displayOptions": "Görüntüleme Seçenekleri",
   "channelStatsTitle": "Kanal İstatistikleri",
   "channelStatsDescription": "Kanal banner'ında canlı abone/görüntülenme/video sayısı kaplamasını göster",
@@ -109,6 +115,7 @@
   "settingsAriaLabel": "Ayarlar menüsünü aç",
   "settingsMenuAriaLabel": "İstatistik görüntüleme ayarları",
   "unknown": "Bilinmiyor",
+  "privacy": "Göndererek, sağlanan bilgileri eklemeyi kabul ediyorsunuz. Lütfen şifre veya kişisel anahtar eklemeyin.",
   "monetization": "Para Kazanma",
   "country": "Ülke",
   "duration": "Süre",
@@ -118,7 +125,6 @@
   "updateAvailableTitle": "YouTube + Güncellemesi Mevcut",
   "version": "Sürüm",
   "newFeatures": "Yeni özellikler ve iyileştirmeler",
-  "changelogHeader": "Değişiklikler",
   "installUpdate": "Güncellemeyi Yükle",
   "later": "Daha sonra",
   "enhancedExperience": "Güçlü özelliklerle geliştirilmiş YouTube deneyimi",
@@ -140,13 +146,12 @@
   "minutesAgo": "{n}d önce",
   "updateAvailableMsg": "Güncelleme {version} mevcut!",
   "upToDateMsg": "En son sürümü ({version}) kullanıyorsunuz",
+  "changelogHeader": "Değişiklikler",
   "updateCheckFailed": "Güncelleme kontrolü başarısız: {msg}",
   "noUpdateInfo": "Güncelleme bilgisi yok",
   "dismiss": "Kapat",
   "adBlocker": "Reklam Engelleyici",
   "adBlockerDescription": "Reklamları otomatik olarak atla ve reklam öğelerini kaldır",
-  "statisticsButtonDescription": "Video oynatıcıda istatistik butonunu göster",
-  "privacy": "Göndererek, sağlanan bilgileri eklemeyi kabul ediyorsunuz. Lütfen şifre veya kişisel anahtar eklemeyin.",
   "seekBackward": "Geri sar",
   "seekForward": "İleri sar",
   "volumeUp": "Ses aç",
@@ -201,6 +206,7 @@
   "reportCopied": "Rapor panoya kopyalandı",
   "copyFailed": "Kopyalama başarısız — lütfen manuel olarak kopyalayın",
   "thumbnailPreview": "Küçük Resim Önizlemesi",
+  "thumbnailPreviewDesc": "Küçük resimlerin/avatarların/bannerlerin orijinal görüntüsünü açmak için bir düğme ekle",
   "clickToOpen": "Yeni sekmede açmak için tıklayın",
   "download": "İndir",
   "thumbnailLoadFailed": "Resim yüklenemedi",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Üzerine gelindiğinde yumuşak animasyonlarla kenar çubuğunu göster",
   "playerSidebarStylesLabel": "Oynatıcı Yan Paneli",
   "playerSidebarStylesDesc": "Oynatıcı yan panelinin düzenini ve davranışını iyileştir",
+  "centeredPlayerLabel": "Ortalanmış Oynatıcı Düzeni",
+  "centeredPlayerDesc": "Gelişmiş stil ile oynatıcıyı ortala",
   "playerBarStylesLabel": "Oynatıcı Çubuğu Stili",
   "playerBarStylesDesc": "Alt oynatıcı çubuğunun görünümünü iyileştir",
   "centeredPlayerBarStylesLabel": "Ortalanmış Oynatıcı Çubuğu",
   "centeredPlayerBarStylesDesc": "Oynatıcı çubuğu kontrollerini yeniden konumlandır ve ortala",
   "miniPlayerStylesLabel": "Mini Oynatıcı",
   "miniPlayerStylesDesc": "Mini oynatıcı düzeni ince ayarlarını etkinleştir",
-  "centeredPlayerLabel": "Ortalanmış Oynatıcı Düzeni",
-  "centeredPlayerDesc": "Gelişmiş stil ile oynatıcıyı ortala",
   "scrollToTopLabel": "Yukarı Kaydır Düğmesi",
   "scrollToTopDesc": "Yan panelde yukarı kaydır düğmesini göster",
   "musicSettingsSaved": "YouTube Music ayarları kaydedildi",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Bulanık arka planlı geliştirilmiş altyazı stili",
   "zenStylePlayerBlurLabel": "Oynatıcı Kontrolleri Bulanıklığı",
   "zenStylePlayerBlurDesc": "Oynatıcı kontrollerine bulanıklık efekti ekle",
+  "zenStyleTheaterEnhancementsLabel": "Sinema Modu İyileştirmeleri",
+  "zenStyleTheaterEnhancementsDesc": "Yüzen yorum paneli ve geliştirilmiş sinema modu",
+  "zenStyleMiscLabel": "Çeşitli İyileştirmeler",
+  "zenStyleMiscDesc": "Kompakt akış, üzerine gelme menüleri ve diğer küçük iyileştirmeler",
   "playlistDeleteMode": "Silme Modu",
   "playlistDeleteModeExit": "Silme Modundan Çık",
   "playlistSelectVideo": "Video Seç",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video oynatma listesinden silindi",
   "playlistDeletePartial": "{success} video silindi, {fail} video silinemedi",
   "translateComment": "Çevir",
-  "showOriginal": "Orijinali göster"
+  "showOriginal": "Orijinali göster",
+  "votingTab": "Oylama",
+  "votingTitle": "Özellik İstekleri",
+  "votingDesc": "YouTube+'ta görmek istediğiniz özellikler için oy verin",
+  "addFeature": "Özellik Ekle",
+  "featureTitle": "Özellik başlığı",
+  "featureDescription": "Açıklama",
+  "noFeatures": "Henüz özellik isteği yok",
+  "submit": "Gönder",
+  "featureRequests": "Özellik İstekleri",
+  "votes": "oy",
+  "like": "Beğen",
+  "dislike": "Beğenme",
+  "statusProposed": "Önerildi",
+  "statusInProgress": "Devam ediyor",
+  "statusCompleted": "Tamamlandı"
 }
