--- a/locales/tw.json
+++ b/locales/tw.json
@@ -10,6 +10,10 @@
   "settingsSaved": "設定已儲存",
   "speedControl": "速度控制",
   "speedControlDesc": "在影片播放器中新增速度控制按鈕",
+  "speedHotkeysTitle": "速度鍵盤快捷鍵",
+  "speedHotkeysDesc": "使用單個字母快捷鍵減弱/強化語音播放速度",
+  "decreaseSpeedHotkey": "減弱",
+  "increaseSpeedHotkey": "強化",
   "screenshotButton": "截圖按鈕",
   "screenshotButtonDesc": "在影片播放器中新增截圖擷取按鈕",
   "downloadButton": "下載按鈕",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "進階功能",
   "enhancedFeaturesDesc": "額外的生產力功能與使用者介面增強",
   "enablePlayAllLabel": "播放全部按鈕",
+  "playAllButton": "播放全部",
   "enablePlayAllDesc": "在播放清單及頻道頁面新增播放全部按鈕",
   "enableResumeTimeLabel": "繼續播放",
   "enableResumeTimeDesc": "記住影片位置並提供繼續播放選項",
@@ -110,6 +115,7 @@
   "settingsAriaLabel": "開啟設定選單",
   "settingsMenuAriaLabel": "統計顯示設定",
   "unknown": "未知",
+  "privacy": "提交時，您同意包含所列資訊。請勿包含密碼或個人令牌",
   "monetization": "營利",
   "country": "國家",
   "duration": "時長",
@@ -119,7 +125,6 @@
   "updateAvailableTitle": "YouTube + 更新可用",
   "version": "版本",
   "newFeatures": "新功能和改進",
-  "changelogHeader": "更新日誌",
   "installUpdate": "安裝更新",
   "later": "稍後",
   "enhancedExperience": "具有強大功能的增強型 YouTube 體驗",
@@ -141,6 +146,7 @@
   "minutesAgo": "{n}分鐘前",
   "updateAvailableMsg": "更新 {version} 可用！",
   "upToDateMsg": "您正在使用最新版本 ({version})",
+  "changelogHeader": "更新日誌",
   "updateCheckFailed": "更新檢查失敗：{msg}",
   "noUpdateInfo": "沒有可用的更新資訊",
   "dismiss": "關閉",
@@ -183,7 +189,6 @@
   "openGitHub": "開啟 GitHub Issue",
   "copyReport": "複製報告",
   "prepareEmail": "準備電子郵件",
-  "privacy": "提交時，您同意包含所列資訊。請勿包含密碼或個人令牌",
   "typeBug": "錯誤 / Bug",
   "typeFeature": "功能請求",
   "typeOther": "其他",
@@ -201,6 +206,7 @@
   "reportCopied": "報告已複製到剪貼簿",
   "copyFailed": "複製失敗 — 請手動複製",
   "thumbnailPreview": "縮圖預覽",
+  "thumbnailPreviewDesc": "新增按鈕以開啟縮圖/頭像/橫幅的原始圖片",
   "clickToOpen": "點擊在新分頁中開啟",
   "download": "下載",
   "thumbnailLoadFailed": "載入圖片失敗",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "懸停時顯示側邊欄，帶有平滑動畫",
   "playerSidebarStylesLabel": "播放器側邊欄",
   "playerSidebarStylesDesc": "增強播放器側邊欄的佈局與行為",
+  "centeredPlayerLabel": "置中播放器佈局",
+  "centeredPlayerDesc": "使用增強樣式置中播放器",
   "playerBarStylesLabel": "播放器工具列樣式",
   "playerBarStylesDesc": "改善底部播放器工具列外觀",
   "centeredPlayerBarStylesLabel": "置中播放器工具列",
   "centeredPlayerBarStylesDesc": "重新定位並置中播放器工具列控制項",
   "miniPlayerStylesLabel": "迷你播放器",
   "miniPlayerStylesDesc": "啟用迷你播放器佈局調整",
-  "centeredPlayerLabel": "置中播放器佈局",
-  "centeredPlayerDesc": "使用增強樣式置中播放器",
   "scrollToTopLabel": "返回頂部按鈕",
   "scrollToTopDesc": "在側面板顯示返回頂部按鈕",
   "musicSettingsSaved": "YouTube Music 設定已儲存",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "增強字幕樣式，添加模糊背景",
   "zenStylePlayerBlurLabel": "播放器控制項模糊",
   "zenStylePlayerBlurDesc": "為播放器控制項添加模糊效果",
+  "zenStyleTheaterEnhancementsLabel": "影院模式增強",
+  "zenStyleTheaterEnhancementsDesc": "浮動留言面板和改進的影院模式",
+  "zenStyleMiscLabel": "其他增強",
+  "zenStyleMiscDesc": "緊湊訂閱源、懸停選單和其他小改進",
   "playlistDeleteMode": "刪除模式",
   "playlistDeleteModeExit": "退出刪除模式",
   "playlistSelectVideo": "選擇影片",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} 部影片已從播放清單刪除",
   "playlistDeletePartial": "{success} 已刪除，{fail} 刪除失敗",
   "translateComment": "翻譯",
-  "showOriginal": "顯示原文"
+  "showOriginal": "顯示原文",
+  "votingTab": "投票",
+  "votingTitle": "功能要求",
+  "votingDesc": "為您想在 YouTube+ 中看到的功能投票",
+  "addFeature": "新增功能",
+  "featureTitle": "功能標題",
+  "featureDescription": "描述",
+  "noFeatures": "尚無功能要求",
+  "submit": "提交",
+  "featureRequests": "功能要求",
+  "votes": "票",
+  "like": "讚",
+  "dislike": "踩",
+  "statusProposed": "已建議",
+  "statusInProgress": "進行中",
+  "statusCompleted": "已完成"
 }
