--- a/locales/uk.json
+++ b/locales/uk.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Налаштування збережено",
   "speedControl": "Керування швидкістю",
   "speedControlDesc": "Додати кнопки керування швидкістю до відеопрогравача",
+  "speedHotkeysTitle": "Гарячі клавіші швидкості",
+  "speedHotkeysDesc": "Використовуйте однолітерні ярлики для зменшення/збільшення швидкості відтворення",
+  "decreaseSpeedHotkey": "Зменшити",
+  "increaseSpeedHotkey": "Збільшити",
   "screenshotButton": "Кнопка знімка екрана",
   "screenshotButtonDesc": "Додати кнопку захоплення знімка екрана до відеопрогравача",
   "downloadButton": "Кнопка завантаження",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Розширені функції",
   "enhancedFeaturesDesc": "Додаткові функції для підвищення продуктивності та покращення інтерфейсу",
   "enablePlayAllLabel": "Кнопка «Відтворити все»",
+  "playAllButton": "Відтворити все",
   "enablePlayAllDesc": "Додати кнопку «Відтворити все» до плейлистів та сторінок каналів",
   "enableResumeTimeLabel": "Відновлення відтворення",
   "enableResumeTimeDesc": "Запам'ятовувати позицію відео та запропонувати відновлення",
@@ -201,6 +206,7 @@
   "reportCopied": "Звіт скопійовано в буфер обміну",
   "copyFailed": "Помилка копіювання — будь ласка, скопіюйте вручну",
   "thumbnailPreview": "Попередній перегляд мініатюри",
+  "thumbnailPreviewDesc": "Додати кнопку для відкриття оригінального зображення мініатюр/аватарів/банерів",
   "clickToOpen": "Клацніть, щоб відкрити у новій вкладці",
   "download": "Завантажити",
   "thumbnailLoadFailed": "Не вдалося завантажити зображення",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Покращене оформлення субтитрів з розмитим фоном",
   "zenStylePlayerBlurLabel": "Розмиття елементів керування програвачем",
   "zenStylePlayerBlurDesc": "Додати ефект розмиття до елементів керування програвачем",
+  "zenStyleTheaterEnhancementsLabel": "Покращення режиму кінотеатру",
+  "zenStyleTheaterEnhancementsDesc": "Плаваюча панель коментарів та покращений режим кінотеатру",
+  "zenStyleMiscLabel": "Різні покращення",
+  "zenStyleMiscDesc": "Компактна стрічка, меню при наведенні та інші покращення",
   "playlistDeleteMode": "Режим видалення",
   "playlistDeleteModeExit": "Вийти з режиму видалення",
   "playlistSelectVideo": "Вибрати відео",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} відео видалено з плейлиста",
   "playlistDeletePartial": "{success} видалено, {fail} не вдалося",
   "translateComment": "Перекласти",
-  "showOriginal": "Показати оригінал"
+  "showOriginal": "Показати оригінал",
+  "votingTab": "Голосування",
+  "votingTitle": "Запити функцій",
+  "votingDesc": "Голосуйте за функції, які хочете бачити в YouTube+",
+  "addFeature": "Додати функцію",
+  "featureTitle": "Назва функції",
+  "featureDescription": "Опис",
+  "noFeatures": "Поки немає запитів функцій",
+  "submit": "Надіслати",
+  "featureRequests": "Запити функцій",
+  "votes": "голосів",
+  "like": "Подобається",
+  "dislike": "Не подобається",
+  "statusProposed": "Запропоновано",
+  "statusInProgress": "В роботі",
+  "statusCompleted": "Готово"
 }
