--- a/locales/uz.json
+++ b/locales/uz.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Sozlamalar saqlandi",
   "speedControl": "Tezlikni boshqarish",
   "speedControlDesc": "Video pleyerga tezlikni boshqarish tugmalarini qo'shish",
+  "speedHotkeysTitle": "Tezlik keyboard qisqartmalari",
+  "speedHotkeysDesc": "Ijro tezligini kamaytirish/oshirish uchun bir harfli qisqartmalardan foydalaning",
+  "decreaseSpeedHotkey": "Kamaytirish",
+  "increaseSpeedHotkey": "Oshirish",
   "screenshotButton": "Skrinshot tugmasi",
   "screenshotButtonDesc": "Video pleyerga skrinshot olish tugmasini qo'shish",
   "downloadButton": "Yuklab olish tugmasi",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Kengaytirilgan funksiyalar",
   "enhancedFeaturesDesc": "Qo'shimcha samaradorlik funksiyalari va interfeys yaxshilanishlari",
   "enablePlayAllLabel": "Hammasini ijro etish tugmasi",
+  "playAllButton": "Hammasini ijro eting",
   "enablePlayAllDesc": "Pleylistlar va kanal sahifalariga Hammasini ijro etish tugmasini qo'shish",
   "enableResumeTimeLabel": "Ijroni davom ettirish",
   "enableResumeTimeDesc": "Video pozitsiyasini eslab qolish va davom ettirishni taklif qilish",
@@ -201,6 +206,7 @@
   "reportCopied": "Hisobot buferga nusxalandi",
   "copyFailed": "Nusxalash xatosi — iltimos, qo'lda nusxalang",
   "thumbnailPreview": "Eskiz ko'rinishi",
+  "thumbnailPreviewDesc": "Miniatura/avatar/banner asl rasmini ochish uchun tugma qo'shing",
   "clickToOpen": "Yangi oynada ochish uchun bosing",
   "download": "Yuklab olish",
   "thumbnailLoadFailed": "Rasmni yuklashda xato",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Loyqa fon bilan kengaytirilgan subtitr uslubi",
   "zenStylePlayerBlurLabel": "Pleyer boshqaruvlari loyqalanishi",
   "zenStylePlayerBlurDesc": "Pleyer boshqaruvlariga loyqalanish effektini qo'shish",
+  "zenStyleTheaterEnhancementsLabel": "Teatr rejimini yaxshilash",
+  "zenStyleTheaterEnhancementsDesc": "Suzuvchi izohlar paneli va yaxshilangan teatr rejimi",
+  "zenStyleMiscLabel": "Turli xil yaxshilanishlar",
+  "zenStyleMiscDesc": "Ixcham lenta, sichqonchani olib o'tish menyulari va boshqa kichik yaxshilanishlar",
   "playlistDeleteMode": "O'chirish rejimi",
   "playlistDeleteModeExit": "O'chirish rejimidan chiqish",
   "playlistSelectVideo": "Videoni tanlash",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "Pleylistdan {count} video olib tashlandi",
   "playlistDeletePartial": "{success} olib tashlandi, {fail} xato",
   "translateComment": "Tarjima qilish",
-  "showOriginal": "Aslini ko'rsatish"
+  "showOriginal": "Aslini ko'rsatish",
+  "votingTab": "Ovoz berish",
+  "votingTitle": "Funktsiya so'rovlari",
+  "votingDesc": "YouTube+ da ko'rmoqchi bo'lgan funktsiyalarga ovoz bering",
+  "addFeature": "Funktsiya qo'shish",
+  "featureTitle": "Funktsiya sarlavhasi",
+  "featureDescription": "Tavsif",
+  "noFeatures": "Hozircha funktsiya so'rovlari yo'q",
+  "submit": "Yuborish",
+  "featureRequests": "Funktsiya so'rovlari",
+  "votes": "ovoz",
+  "like": "Yoqdi",
+  "dislike": "Yoqmadi",
+  "statusProposed": "Taklif qilingan",
+  "statusInProgress": "Bajarilmoqda",
+  "statusCompleted": "Bajarildi"
 }
