--- a/locales/vi.json
+++ b/locales/vi.json
@@ -10,6 +10,10 @@
   "settingsSaved": "Đã lưu cài đặt",
   "speedControl": "Điều khiển tốc độ",
   "speedControlDesc": "Thêm nút điều khiển tốc độ vào trình phát video",
+  "speedHotkeysTitle": "Phím tắt tốc độ bàn phím",
+  "speedHotkeysDesc": "Sử dụng phím tắt một ký tự để giảm/tăng tốc độ phát lại",
+  "decreaseSpeedHotkey": "Giảm",
+  "increaseSpeedHotkey": "Tăng",
   "screenshotButton": "Nút chụp màn hình",
   "screenshotButtonDesc": "Thêm nút chụp màn hình vào trình phát video",
   "downloadButton": "Nút tải xuống",
@@ -60,6 +64,7 @@
   "enhancedFeaturesTitle": "Tính năng nâng cao",
   "enhancedFeaturesDesc": "Các tính năng tăng năng suất bổ sung và cải tiến giao diện người dùng",
   "enablePlayAllLabel": "Nút Phát Tất Cả",
+  "playAllButton": "Phát tất cả",
   "enablePlayAllDesc": "Thêm nút Phát Tất Cả vào danh sách phát và trang kênh",
   "enableResumeTimeLabel": "Tiếp tục phát",
   "enableResumeTimeDesc": "Ghi nhớ vị trí video và đề xuất tiếp tục phát",
@@ -201,6 +206,7 @@
   "reportCopied": "Đã sao chép báo cáo vào clipboard",
   "copyFailed": "Sao chép thất bại — vui lòng sao chép thủ công",
   "thumbnailPreview": "Xem trước hình thu nhỏ",
+  "thumbnailPreviewDesc": "Thêm nút để mở ảnh gốc của hình thu nhỏ/avatar/banner",
   "clickToOpen": "Nhấp để mở trong tab mới",
   "download": "Tải xuống",
   "thumbnailLoadFailed": "Không thể tải hình ảnh",
@@ -249,14 +255,14 @@
   "sidebarHoverDesc": "Hiển thị thanh bên khi di chuột với hiệu ứng mượt mà",
   "playerSidebarStylesLabel": "Bảng bên của trình phát",
   "playerSidebarStylesDesc": "Cải thiện bố cục và hành vi của bảng bên trình phát",
+  "centeredPlayerLabel": "Bố cục trình phát ở giữa",
+  "centeredPlayerDesc": "Căn giữa trình phát với kiểu dáng nâng cao",
   "playerBarStylesLabel": "Kiểu thanh trình phát",
   "playerBarStylesDesc": "Cải thiện giao diện thanh điều khiển ở cuối trình phát",
   "centeredPlayerBarStylesLabel": "Thanh trình phát căn giữa",
   "centeredPlayerBarStylesDesc": "Định vị lại và căn giữa điều khiển thanh trình phát",
   "miniPlayerStylesLabel": "Trình phát thu nhỏ",
   "miniPlayerStylesDesc": "Bật tinh chỉnh bố cục cho trình phát thu nhỏ",
-  "centeredPlayerLabel": "Bố cục trình phát ở giữa",
-  "centeredPlayerDesc": "Căn giữa trình phát với kiểu dáng nâng cao",
   "scrollToTopLabel": "Nút cuộn lên đầu",
   "scrollToTopDesc": "Hiển thị nút cuộn lên đầu trong bảng bên",
   "musicSettingsSaved": "Đã lưu cài đặt YouTube Music",
@@ -280,6 +286,10 @@
   "zenStyleBetterCaptionsDesc": "Kiểu phụ đề nâng cao với nền mờ",
   "zenStylePlayerBlurLabel": "Làm Mờ Điều Khiển Trình Phát",
   "zenStylePlayerBlurDesc": "Thêm hiệu ứng làm mờ cho điều khiển trình phát",
+  "zenStyleTheaterEnhancementsLabel": "Cải thiện chế độ rạp chiếu",
+  "zenStyleTheaterEnhancementsDesc": "Bảng bình luận nổi và chế độ rạp chiếu cải tiến",
+  "zenStyleMiscLabel": "Các cải tiến khác",
+  "zenStyleMiscDesc": "Dòng thời gian gọn gàng, menu khi di chuột và các cải tiến khác",
   "playlistDeleteMode": "Chế độ xóa",
   "playlistDeleteModeExit": "Thoát chế độ xóa",
   "playlistSelectVideo": "Chọn video",
@@ -288,5 +298,20 @@
   "playlistDeleteSuccess": "{count} video đã được xóa khỏi playlist",
   "playlistDeletePartial": "{success} đã xóa, {fail} không thành công",
   "translateComment": "Dịch",
-  "showOriginal": "Hiện nguyên bản"
+  "showOriginal": "Hiện nguyên bản",
+  "votingTab": "Bình chọn",
+  "votingTitle": "Yêu cầu tính năng",
+  "votingDesc": "Bình chọn cho các tính năng bạn muốn thấy trong YouTube+",
+  "addFeature": "Thêm tính năng",
+  "featureTitle": "Tên tính năng",
+  "featureDescription": "Mô tả",
+  "noFeatures": "Chưa có yêu cầu tính năng nào",
+  "submit": "Gửi",
+  "featureRequests": "Yêu cầu tính năng",
+  "votes": "phiếu bầu",
+  "like": "Thích",
+  "dislike": "Không thích",
+  "statusProposed": "Đề xuất",
+  "statusInProgress": "Đang tiến hành",
+  "statusCompleted": "Hoàn thành"
 }
